20200319_02_수정 (02_정당과 역사)

--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -20,15 +20,15 @@
 - 신진 진보정당
 
 ## 민주당계 정당 
-**연속성으로 따지면 한국에서 가장 오래된 정당, 2020년의 집권당. 그들이 '주류'로 인정받기 위해 규모를 키우는 과정에서, 한국 정치는 가치관의 선명함을 희생하여 역동성을 얻게 된다.
+**연속성으로 따지면 한국에서 가장 오래된 정당, 2020년의 집권당. 그들이 ‘주류’로 인정받기 위해 규모를 키우는 과정에서, 한국 정치는 가치관의 선명함을 희생하여 역동성을 얻게 된다.**
 
-정당의 창당 시점과 지도부의 연속성만으로 따지면, 한국에서 가장 오래된 정당은 민주당계 정당이다. 한국의 광복 및 정부수립 시기에 창당하여 미군정(1945~ 48) 시기의 각종 사무에 참여해 실질적인 집권당 역할을 했던 정당들 - 한국민주당, 민주국민당, 대한여자국민당 등 - 이 현재 민주당계 정당의 근원이다. 이들은 주로 독립운동에 참여하거나 해외 유학을 다녀온 지주/자본가 계층 인물들이 많았으며, 반공과 보수우파라는 정체성에서는 당시 집권당인 자유당과 큰 차이가 없었다. 이들이 본격적으로 반-독재, 반-보수주류 정당의 태도를 가지는 것은 1955년에 '민주당'을 창당한 때 부터다. 1954년 자유당(보수주류 정당)이 이승만의 종신집권을 가능하게 하는 `헌법개정("이 헌법공포 당시의 대통령에 대해서는 연임제한 규정을 적용하지 않는다"는 부칙을 삽입했다.)`을 통과시키자, 이에 반대하는 모든 세력이 하나의 정당으로 모인 것이다. 다만 이 때에도 조봉암을 비롯한 사민주의 세력의 참여는 받아들여지지 않았고(p. XXX 참조), 민주당은 정치에서의 자유주의와 사회경제정책의 보수성을 담은 '리버럴' 정당이 되었다. 
+정당의 창당 시점과 지도부의 연속성만으로 따지면, 한국에서 가장 오래된 정당은 민주당계 정당이다. 한국의 광복 및 정부수립 시기에 창당하여 미군정(1945~ 48) 시기의 각종 사무에 참여해 실질적인 집권당 역할을 했던 정당들 - 한국민주당, 민주국민당, 대한여자국민당 등 - 이 현재 민주당계 정당의 근원이다. 이들은 주로 독립운동에 참여하거나 해외 유학을 다녀온 지주/자본가 계층 인물들이 많았으며, 반공과 보수우파라는 정체성에서는 당시 집권당인 자유당과 큰 차이가 없었다. 이들이 본격적으로 반-독재, 반-보수주류 정당의 태도를 가지는 것은 1955년에 ‘민주당’을 창당한 때 부터다. 1954년 자유당(보수주류 정당)이 이승만의 종신집권을 가능하게 하는 `헌법개정(“이 헌법공포 당시의 대통령에 대해서는 연임제한 규정을 적용하지 않는다”는 부칙을 삽입했다.)`을 통과시키자, 이에 반대하는 모든 세력이 하나의 정당으로 모인 것이다. 다만 이 때에도 조봉암을 비롯한 사민주의 세력의 참여는 받아들여지지 않았고(p. XXX 참조), 민주당은 정치에서의 자유주의와 사회경제정책의 보수성을 담은 ‘리버럴’ 정당이 되었다. 
 
-이후 민주당계 정당의 인적구성은, 당 바깥에서 (당시 기준으로) 좀더 자유주의적이고 좀더 좌파적인 인물을 받아들이는 방식으로 확대되었다. 1970~ 80년대에 정당 바깥의 민주화운동 활동가가, 90년대 이후에는 각종 사회이슈를 대변하는 시민사회운동 활동가가 민주당계 정당을 통해 중앙정치에 입문하는 경우가 생겼다. 민주당계 정당에서도 '인재 영입', '젊은 피 수혈' 등의 이유로 이를 적극 장려했다. 이를 주도한 것이 당시 민주당계 정당의 리더였던 '양김', 김영삼과 김대중이었다. 이를 통해 민주당계 정당은 보수주류 정당에 반대하는 세력의 연합체로서 입지를 다졌다. 특히나, 1990년 "3당 합당"(p. XXX 참고) 이후 국회 안의 유일한 야당으로서 고립되자, 민주당계 정당은 집권 가능성을 높이기 위해 보수적 성향의 제3세력 정당과도 연합하는 등의 실리적인 합종연횡도 거듭했다. 1997년 김대중, 2002년 노무현의 대통령 당선은, 반-보수주류 정당의 기치 아래에서 김종필(자유민주연합), 정몽준 등 보수적 대선주자와 단일화가 있었기에 가능했다.
+이후 민주당계 정당의 인적구성은, 당 바깥에서 (당시 기준으로) 좀더 자유주의적이고 좀더 좌파적인 인물을 받아들이는 방식으로 확대되었다. 1970~ 80년대에 정당 바깥의 민주화운동 활동가가, 90년대 이후에는 각종 사회이슈를 대변하는 시민사회운동 활동가가 민주당계 정당을 통해 중앙정치에 입문하는 경우가 생겼다. 민주당계 정당에서도 ‘인재 영입’, ‘젊은 피 수혈’ 등의 이유로 이를 적극 장려했다. 이를 주도한 것이 당시 민주당계 정당의 리더였던 ‘양김’, 김영삼과 김대중이었다. 이를 통해 민주당계 정당은 보수주류 정당에 반대하는 세력의 연합체로서 입지를 다졌다. 특히나, 1990년 “3당 합당”(p. XXX 참고) 이후 국회 안의 유일한 야당으로서 고립되자, 민주당계 정당은 집권 가능성을 높이기 위해 보수적 성향의 제3세력 정당과도 연합하는 등의 실리적인 합종연횡도 거듭했다. 1997년 김대중, 2002년 노무현의 대통령 당선은, 반-보수주류 정당의 기치 아래에서 김종필(자유민주연합), 정몽준 등 보수적 대선주자와 단일화가 있었기에 가능했다.
 
 정부수립 이후 1980년대까지 이어진 개발독재 시절의 정책담론이 지금까지 한국이라는 나라가 작동하는 시스템의 큰 틀을 결정했다면, 민주당계 정당이 집권했던 김대중-노무현 행종부 시기(1998~ 2008)의 정책담론은 현대 한국 사회에서 살아가는 삶의 양식에 지대한 영향을 끼치고 있다. 여기에는 정보통신 인프라 완비, 지식산업 기반의 벤쳐기업/스타트업 육성, 현재 한국의 교육/입시제도, 비정규직 및 정리해고 제도의 운영, 문화산업 검열 폐지 및 일본 대중문화 개방, 지방분권과 균형발전 개념의 도입, 남북관계 개선을 통한 교류 가능성 증대 등이 있다. 민주당계/보수주류/사민주의 정당으로 나뉜 현재의 정당체제가 정착된 것도, 각 정당이 김대중-노무현 행정부의 정책을 평가하는 관점과 정책성향의 차이에 따라 갈라짐에 따라 가능했다. 보수주류 정당은 행정부가 반-기업적거나 과도하게 자유를 침해한다며 비판했고, 사민주의 정당은 행정부가 기업을 지나치게 자유방임하여 사회경제적 약자의 형편이 더욱 나빠진다며 비판했다.
 
-앞서 말했듯 민주당계 정당은 반-보수주류 정당의 가치 아래에서 다양한 구성원이 모였고, 이는 1955년 민주당의 창당 시기부터 계속해서 당내 계파의 당내 주도권 경쟁으로 이어졌다. 2016년 총선을 앞두고, 민주당계 정당(당시 새정치민주연합)은 더불어민주당과 국민의당으로 분당되었고, 이 때부터 현재까지 '민주당계 주류정당'과 '민주당계 전라권 제3정당'으로 나뉜 두 정당은 의정활동과 선거에서 연합과 경쟁을 거듭하고 있다. 이 두 정당은 뚜렷한 정책지향보다는, 직업으로서 정치를 하는 스타일(?)의 차이에 따라 나눠서 보아야 좋다.
+앞서 말했듯 민주당계 정당은 반-보수주류 정당의 가치 아래에서 다양한 구성원이 모였고, 이는 1955년 민주당의 창당 시기부터 계속해서 당내 계파의 당내 주도권 경쟁으로 이어졌다. 2016년 총선을 앞두고, 민주당계 정당(당시 새정치민주연합)은 더불어민주당과 국민의당으로 분당되었고, 이 때부터 현재까지 ‘민주당계 주류정당’과 ‘민주당계 전라권 제3정당’으로 나뉜 두 정당은 의정활동과 선거에서 연합과 경쟁을 거듭하고 있다. 이 두 정당은 뚜렷한 정책지향보다는, 직업으로서 정치를 하는 스타일(?)의 차이에 따라 나눠서 보아야 좋다.
 
 
 ### 더불어민주당 - 민주당계 주류정당
@@ -36,17 +36,17 @@
 
 집권당의 구성원이 이런 폭넓은 스펙트럼을 이루면, 행정부를 운영하는 입장에서는 큰 장점과 단점을 하나씩 가지게 된다. 장점으로는 행정부에 기용할 수 있는 당내 인력의 범위가 넓어져서, 고위 정무직 공무원의 자리에 집권당 출신 정치인을 두루 배치하여 행정관료를 직접 움직이며 정책을 추진하기 좋다는 것이 있다. 그러나 단점으로, 집권당이 추진할 정책 자체가 굉장히 모호해진다는 것이 있다. 특정한 이슈를 다룰 때 추구하는 가치가 당내 정치인들마다 모두 다르기 때문에, 다양한 정책들이 큰 틀의 방향성을 갖추고 유기적으로 시행되기보다는, 그때 그때 상황과 여론에 맞춰 특정한 관점을 선택해서 정책을 시행하게 된다. 당내 구성원들이 가장 쉽게 합의하고 꾸준히 추진하는 의제는 검찰개혁, 사법개혁, 언론자유 문제 등 개인의 인권 문제 중에서도 중앙의 권력구조와 직접 연관된 분야로 한정되는 경향이 있다. 
 
-이런 측면에서 더불어민주당과 문재인 행정부의 취약점이 특히 두드러진 분야가 노동, 성소수자, 그리고 대학입시제도 개편 문제였다. 집권 초기 더불어민주당은 "소득주도성장"이라는 이름을 내세워 노동시간 단축, 최저임금 인상 및 그 충격을 완화할 지원사업을 추진했었지만, 당내에서도 경제위기를 촉발한다는 주장이 강화되면서 정책 자체가 후퇴하였다. 또한 교육부가 여러 공론합의 과정을 통해 김대중 행정부 시절부터 계속되었던 일관성(수능의 비중을 낮추고 수시전형을 확대하되, 교육부가 엄격한 전형 가이드라인은 제시한다)을 유지하려던 상황에서, (조국 법무장관 임명 과정에서 불거진) 대학입시 관련 부적격 행동에 대한 비판이 강화되자 대통령의 담화를 통해 방향성이 완전히 변화(수능 비중 확대)하는 상황이 있기도 했다. (동성결혼 제도화, `<군형법> 제92조의6("항문성교"를 한 군인, 군무원 등을 처벌하는 조항. 영외에서 또는 강압 없이 이뤄진 경우도 처벌하도록 해서, 사실상 게이 군인을 존재 자체를 처벌하는 조항으로 평가받는다.)` 폐지 등의) 성소수자 문제에 있어서는 의원들마다, 당 지도부 구성원마다 입장이 전부 달라서 서로 상충되는 경우가 많았다. 
+이런 측면에서 더불어민주당과 문재인 행정부의 취약점이 특히 두드러진 분야가 노동, 성소수자, 그리고 대학입시제도 개편 문제였다. 집권 초기 더불어민주당은 “소득주도성장”이라는 이름을 내세워 노동시간 단축, 최저임금 인상 및 그 충격을 완화할 지원사업을 추진했었지만, 당내에서도 경제위기를 촉발한다는 주장이 강화되면서 정책 자체가 후퇴하였다. 또한 교육부가 여러 공론합의 과정을 통해 김대중 행정부 시절부터 계속되었던 일관성(수능의 비중을 낮추고 수시전형을 확대하되, 교육부가 엄격한 전형 가이드라인은 제시한다)을 유지하려던 상황에서, (조국 법무장관 임명 과정에서 불거진) 대학입시 관련 부적격 행동에 대한 비판이 강화되자 대통령의 담화를 통해 방향성이 완전히 변화(수능 비중 확대)하는 상황이 있기도 했다. (동성결혼 제도화, `<군형법> 제92조의6(“항문성교”를 한 군인, 군무원 등을 처벌하는 조항. 영외에서 또는 강압 없이 이뤄진 경우도 처벌하도록 해서, 사실상 게이 군인을 존재 자체를 처벌하는 조항으로 평가받는다.)` 폐지 등의) 성소수자 문제에 있어서는 의원들마다, 당 지도부 구성원마다 입장이 전부 달라서 서로 상충되는 경우가 많았다. 
 
 
 ### 민생당 - 민주당계 전라권 제3정당
 민생당은 2016년에 창당한 국민의당 구성원 중, 전라권 기반 또는 기존에 민주당계 정당에 소속되었던 인물들이 주축이 되어 구성된 정당이다. 현재 더불어민주당 지도부와 민생당 구성원의 유서깊은 갈등은 2000년대 초반부터 진행되었다(6권 ‘남부지방 권역’, p.XXX 참고). 민주당계 정당이 하나로 통합되어 있던 시절에는, 당의 주요 지지층인 전라권 유권자와 자유주의적 관점을 가진 지지자 사이에 뚜렷한 관점 차이가 존재했다. 민생당은 이 중에서 전라권 유권자 또는 상대적으로 보수적인 전통적 민주당계 지지자를 타겟으로 만들어진 정당이라고 할 수 있다. 그러나 민생당 역시 민주당계 정당으로서, 더불어민주당과 마찬가지로 반-보수주류 정당, 남북관계 화해 등을 추구하고 있다는 공통점이 있다. 이 때문에 민생당의 성격을 명확하게 구분하여 설명하기는 어렵다. 
 
-민생당의 성격을 맥락으로 이해하기 위해, 2016년에 새정치민주연합(더불어민주당의 전신)에서 분당되어 탄생한 국민의당을 잠깐 설명해보자. 2015년 문재인이 새정치민주연합 대표로 취임한 이후, 안철수, 박지원, 문병호, 김관영, 주승용 등이 시간을 두고 탈당하여 국민의당을 창당하고, 여기에 이미 재보궐선거 출마를 위해 탈당한 상태였던 정동영, 천정배, 박준영 등이 합류했다. 창당 당시 국민의당은 "호남정치의 복원", "민주당 내 친문패권주의 타파", "중도개혁세력 결집" 등을 내걸었다. 2016년 총선 당시, 국민의당의 지역구 후보들은 대부분 민주당계 정당 출신, 혹은 전라권에서 무소속으로 출마한 경험이 있는 인물들이었다. 제3정당으로서 민생당의 성격은 "제3세력 정당" 부분(p. XXX)에서 설명해보자. 
+민생당의 성격을 맥락으로 이해하기 위해, 2016년에 새정치민주연합(더불어민주당의 전신)에서 분당되어 탄생한 국민의당을 잠깐 설명해보자. 2015년 문재인이 새정치민주연합 대표로 취임한 이후, 안철수, 박지원, 문병호, 김관영, 주승용 등이 시간을 두고 탈당하여 국민의당을 창당하고, 여기에 이미 재보궐선거 출마를 위해 탈당한 상태였던 정동영, 천정배, 박준영 등이 합류했다. 창당 당시 국민의당은 “호남정치의 복원”, “민주당 내 친문패권주의 타파”, “중도개혁세력 결집” 등을 내걸었다. 2016년 총선 당시, 국민의당의 지역구 후보들은 대부분 민주당계 정당 출신, 혹은 전라권에서 무소속으로 출마한 경험이 있는 인물들이었다. 제3정당으로서 민생당의 성격은 “제3세력 정당” 부분(p. XXX)에서 설명해보자. 
 
 
 ### 열린민주당 - 민주당계 비례정당
-2020년 2월에 `창당준비위원회(<정당법>에 의해 중앙선거관리위원회에 등록하여 창당 과정을 준비하는 조직. 창당 최소요건인 5000명의 당원을 확보하기 위해 6개월간 한시적으로 선관위에 등록하여 활동할 수 있다.)`로 등록하여 창당과정을 밟는 상태인 열린민주당은 "더불어민주당이 중도화·보수화하고 대야투쟁을 하지 않는 부분에 대한 비판"을 위해 창당했다고 `밝히고 있다.(<정봉주, 비례정당 '열린민주당' 창당…“민주당 위성정당 아냐">, 연합뉴스, 2020/02/28)` 3월 6일 더불어민주당 소속으로 당선되었던 무소속 현역의원 손혜원이 입당하면서, 원내정당이 되었다. 2020년 3월 15일 현재, 더불어민주당과 민생당 모두 열린민주당에게 별다른 관심과 지원을 주지 않고 있다. 
+2020년 2월에 `창당준비위원회(<정당법>에 의해 중앙선거관리위원회에 등록하여 창당 과정을 준비하는 조직. 창당 최소요건인 5000명의 당원을 확보하기 위해 6개월간 한시적으로 선관위에 등록하여 활동할 수 있다.)`로 등록하여 창당과정을 밟는 상태인 열린민주당은 “더불어민주당이 중도화·보수화하고 대야투쟁을 하지 않는 부분에 대한 비판”을 위해 창당했다고 `밝히고 있다.(<정봉주, 비례정당 ‘열린민주당’ 창당…“민주당 위성정당 아냐”>, 연합뉴스, 2020/02/28)` 3월 6일 더불어민주당 소속으로 당선되었던 무소속 현역의원 손혜원이 입당하면서, 원내정당이 되었다. 2020년 3월 15일 현재, 더불어민주당과 민생당 모두 열린민주당에게 별다른 관심과 지원을 주지 않고 있다. 
 
 당장 기존 정당의 지원을 받아 창당되고 있는 것은 아니나, 열린민주당이 궁극적으로는 소수의 비례대표를 당선시켜 향후 중앙정계에서 더불어민주당과의 합당 등을 통해 영향력을 행사하기 위해 창당한 정당이 아니냐는 추측도 나오고 있다. 열린민주당은 지역구 출마 없이 비례대표만 출마한다는 방침을 세웠으며, 기존에 창당논의가 진행되지 않다가 보수주류 정당의 비례대표 위성정당 창당(p. XXX 참고)과 더불어민주당의 비례대표 위성정당 창당이 구체화되기 시작하자 등장한 이후 창당되었다는 점이 그런 가설에 무게를 실어준다.
 
@@ -56,7 +56,7 @@
 #### 서울 영등포구 을
 **한때 최연소 국회의원의 귀환**
 
-민주당계 정당의 계파에 따른 갈등을 한때 가장 상징적으로 보여줬던 인물이 김민석이다. 80년대 학생운동을 이끌었고 김대중의 영입으로 1996년 총선 최연소 국회의원(영등포구 을, 당시 32세), 2002년 서울시장 후보를 지내는 상당한 젊은 거물이었으나, 당시의 당내 소장파(현재의 더불어민주당 지도부 세력)와는 꾸준히 마찰이 있었다. 2002년 10월, 대선을 앞두고 노무현이 정몽준과 단일화해야 한다고 주장하며 `정몽준 캠프로 이적(2002년 4월에 새천년민주당 후보로 결정된 노무현은 지속적인 지지율 하락을 겪었고, 2002년 한/일 월드컵 조직위원장이던 정몽준이 보수주류 정당을 꺾을 후보로 떠오르고 있었다. 이 두 후보에 대한 단일화 요구가 계속되어, 결국 11월 24일 여론조사를 통해 노무현으로 후보 단일화가 이루어졌다.)`하였으나, 대선 전날인 12월 18일 정몽준이 노무현 지지 철회를 발표하며 복당은 영영 불가능해졌다. 이후 오랜 기간동안 낙선과 떠돌이 생활을 하고, 2016년 총선에는 "민주당"을 창당하여 비례대표로 출마하기도 했다. 
+민주당계 정당의 계파에 따른 갈등을 한때 가장 상징적으로 보여줬던 인물이 김민석이다. 80년대 학생운동을 이끌었고 김대중의 영입으로 1996년 총선 최연소 국회의원(영등포구 을, 당시 32세), 2002년 서울시장 후보를 지내는 상당한 젊은 거물이었으나, 당시의 당내 소장파(현재의 더불어민주당 지도부 세력)와는 꾸준히 마찰이 있었다. 2002년 10월, 대선을 앞두고 노무현이 정몽준과 단일화해야 한다고 주장하며 `정몽준 캠프로 이적(2002년 4월에 새천년민주당 후보로 결정된 노무현은 지속적인 지지율 하락을 겪었고, 2002년 한/일 월드컵 조직위원장이던 정몽준이 보수주류 정당을 꺾을 후보로 떠오르고 있었다. 이 두 후보에 대한 단일화 요구가 계속되어, 결국 11월 24일 여론조사를 통해 노무현으로 후보 단일화가 이루어졌다.)`하였으나, 대선 전날인 12월 18일 정몽준이 노무현 지지 철회를 발표하며 복당은 영영 불가능해졌다. 이후 오랜 기간동안 낙선과 떠돌이 생활을 하고, 2016년 총선에는 “민주당”을 창당하여 비례대표로 출마하기도 했다. 
 
 그런 그가 2017년 대선을 기점으로 더불어민주당과의 합당을 통해 복귀하고, 민주연구원(더불어민주당의 정책연구소. <정당법>에 의해 국회의원이 있는 정당은 정책연구소를 의무적으로 운영해야 한다.) 원장 등을 역임한 뒤 당내 경선에서 압승하며 지역구로 복귀한다. 그의 선거결과와 행보는 향후 민주당계 정당이 다시 통합될 수도 있는 환경에서, 굉장히 주목할 만한 레퍼런스가 될 것이다. 
 
@@ -70,7 +70,7 @@
 #### 부산 연제구
 **부산, 30대, 소장파, 당내 육성 인재**
 
-김해영이라는 한 명의 초선의원이 더불어민주당 당내에서 가지는 상징성은 대단하다. 총선 출마 이전부터 민주당계 정당의 대선 선거캠프, 연제구지역위원장, 전국청년위원장(직무대리) 등을 역임하며 당내에서 성장한 뒤, 2016년 총선의 부산 연제구에서 아무도 예상하지 못한 승리를 거두며 '2016-2020 국회 최연소 지역구국회의원(당시 만 39세)'이라는 타이틀과 함께 화려하게 국회로 입성한다. 한국에서 직업 정치인이 되는 과정을 보면, 대외활동이나 여타 직업활동이 아닌, 정당 내부에서의 정치활동 만을 바탕으로 성장하여 30대 나이에 국회의원이 되는 것은 거의 불가능하다. 그 벽을 (심지어 경남권 지역구에서) 뚫어낸 인물로서 김해영은 상당한 주목을 받게 되었다. 
+김해영이라는 한 명의 초선의원이 더불어민주당 당내에서 가지는 상징성은 대단하다. 총선 출마 이전부터 민주당계 정당의 대선 선거캠프, 연제구지역위원장, 전국청년위원장(직무대리) 등을 역임하며 당내에서 성장한 뒤, 2016년 총선의 부산 연제구에서 아무도 예상하지 못한 승리를 거두며 ‘2016-2020 국회 최연소 지역구국회의원(당시 만 39세)’이라는 타이틀과 함께 화려하게 국회로 입성한다. 한국에서 직업 정치인이 되는 과정을 보면, 대외활동이나 여타 직업활동이 아닌, 정당 내부에서의 정치활동 만을 바탕으로 성장하여 30대 나이에 국회의원이 되는 것은 거의 불가능하다. 그 벽을 (심지어 경남권 지역구에서) 뚫어낸 인물로서 김해영은 상당한 주목을 받게 되었다. 
 
 현재 김해영은 더불어민주당 `최고위원(더불어민주당, 미래통합당 등이 운영하는 제도. 당대표 및 원내대표와 함께 당내 최고위 지도부 회의에 참여한다.)`으로 당 지도부에 참여했으며, 그 과정에서 조국 법무장관 임명, 더불어민주당의 비례연합정당 참가 등의 상황에서 지도부 주류와 다른 의견을 내는 소장파의 입지를 드러냈다. 그의 생환여부 및 앞으로의 활동은 더불어민주당의 미래에 굉장한 영향을 끼칠 것이다.
 
@@ -86,11 +86,11 @@
 
 
 ## 보수주류 정당
-**대한민국 정부수립 이후 72년 중 58년간 집권한 정당. '권위주의적 철권통치'와 '경제와 안보에 유능'하다는 두 이미지의 정당. 이 이미지가 2020년 총선을 거쳐 어떤 방향으로든 급격하게 변할 것이다.**
+**대한민국 정부수립 이후 72년 중 58년간 집권한 정당. ‘권위주의적 철권통치’와 ‘경제와 안보에 유능’하다는 두 이미지의 정당. 이 이미지가 2020년 총선을 거쳐 어떤 방향으로든 급격하게 변할 것이다.**
 
 1948년의 대한민국 정부수립 이후, 보수주류 정당은 대부분의 기간동안 집권당의 위치를 차지하며 한국 사회의 ‘보수’이자 ‘주류’로 자리잡았다. 물론 1987년 민주화 이전까지, 보수주류 정당이 대통령 1인을 중심으로 한 권위주의 독재정권을 통해 집권했다는 것은 부정할 수 없다. 이승만의 자유당, 박정희의 민주공화당, 전두환과 노태우의 민주정의당으로 이어지는 약 40년의 기간동안, 보수주류 정당은 쿠데타와 당내 세력 숙청 등 폭력적인 방법을 거쳐서(?) 새로운 수뇌부를 수혈받았다. 이 교체 과정에서 한국 사회의 개발을 주도한 관료, 군인, 학자, 기업가 등이 보수주류 정당을 통해 정계에 입문했던 것도 사실이다. (보수주류 정당의 집권이 영원히 계속될 것 같았다는 배경도 이해해 주자.) 그럼에도 불구하고, 당원의 구성, 수뇌부와 거리가 먼 일반 정치인의 구성, 지역조직 등은 별다른 변화 없이 계승되어, 보수주류 정당이라는 정체성을 유지할 수 있었다.
 
-보수주류 정당의 이념과 정책지향 역시, 과거 독재정권 시절의 가치를 유지하며 시대에 맞추어 조금씩 변형하는 형태를 취하고 있다. 북한과의 대립과 한미동맹을 중심으로 하는 외교안보정책, 정부의 시장경제 불간섭주의, 대기업 성장 중심의 경제정책, 최저임금 인상 및 노동시간 단축 반대, 복지정책 확대 및 정부재정 확대지출 반대, ‘동성애 및 동성혼’ 반대 등의 입장을 취하고 있다. 물론 이 입장은 생각보다 쉽게(!) 바뀌기도 한다. 1990년대 초반의 공산주의 진영 붕괴 당시, 러시아(소비에트 연방)와 중국과의 수교를 성사시키고 북한과의 종전협정을 추진했던 것은 보수주류 정당의 성과였다. 한국의 건강보험과 국민연금과 고용보험(실업급여)을 도입한 것도, `<대한민국헌법> 제119조2항("국가는 균형있는 국민경제의 성장 및 안정과 적정한 소득의 분배를 유지하고, 시장의 지배와 경제력의 남용을 방지하며, 경제주체간의 조화를 통한 경제의 민주화를 위하여 경제에 관한 규제와 조정을 할 수 있다.")`에 명시된 "경제의 민주화" 조항을 삽입한 것도 보수주류 정당의 성과였다. 요컨데, 행정부 관료나 경제학 교수 등이 군부정권에 참여해서 '정권을 잃을 염려 없이' 정책을 주도하던 때에는 보수/우파 이념성향에 얽매이지 않은 정책을 짰고, 당내 정치인들 역시 자신의 이권이 침해되지 않는 선에서 이를 무난하게 따랐다. 오히려 민주화 이후 30년 간 보수주류 정당은 보수의 이념을 선점하기 위해 노력했고, 그 과정에서 자신이 민심을 얻을 수 있었던 근거인 '합리적 정책 추진'의 틀이 점점 희석되었다고 보아야 한다. 그 상징적인 사건이 바로 2017년의 박근혜 대통령 파면이었다.
+보수주류 정당의 이념과 정책지향 역시, 과거 독재정권 시절의 가치를 유지하며 시대에 맞추어 조금씩 변형하는 형태를 취하고 있다. 북한과의 대립과 한미동맹을 중심으로 하는 외교안보정책, 정부의 시장경제 불간섭주의, 대기업 성장 중심의 경제정책, 최저임금 인상 및 노동시간 단축 반대, 복지정책 확대 및 정부재정 확대지출 반대, ‘동성애 및 동성혼’ 반대 등의 입장을 취하고 있다. 물론 이 입장은 생각보다 쉽게(!) 바뀌기도 한다. 1990년대 초반의 공산주의 진영 붕괴 당시, 러시아(소비에트 연방)와 중국과의 수교를 성사시키고 북한과의 종전협정을 추진했던 것은 보수주류 정당의 성과였다. 한국의 건강보험과 국민연금과 고용보험(실업급여)을 도입한 것도, `<대한민국헌법> 제119조2항(“국가는 균형있는 국민경제의 성장 및 안정과 적정한 소득의 분배를 유지하고, 시장의 지배와 경제력의 남용을 방지하며, 경제주체간의 조화를 통한 경제의 민주화를 위하여 경제에 관한 규제와 조정을 할 수 있다.”)`에 명시된 “경제의 민주화” 조항을 삽입한 것도 보수주류 정당의 성과였다. 요컨데, 행정부 관료나 경제학 교수 등이 군부정권에 참여해서 ‘정권을 잃을 염려 없이’ 정책을 주도하던 때에는 보수/우파 이념성향에 얽매이지 않은 정책을 짰고, 당내 정치인들 역시 자신의 이권이 침해되지 않는 선에서 이를 무난하게 따랐다. 오히려 민주화 이후 30년 간 보수주류 정당은 보수의 이념을 선점하기 위해 노력했고, 그 과정에서 자신이 민심을 얻을 수 있었던 근거인 ‘합리적 정책 추진’의 틀이 점점 희석되었다고 보아야 한다. 그 상징적인 사건이 바로 2017년의 박근혜 대통령 파면이었다.
 
 현재의 보수주류 정당이 완성된 계기는, “3당 합당”이라고 불리우는 1990년 1월의 사건이다. 2기 군사정권의 수뇌부(노태우)가 주축이 된 민주정의당(당시 전체 299석 중 128석), 1기 군사정권의 수뇌부(김종필)가 주축이 된 신민주공화당(35석), 그리고 민주당계 정당의 오랜 리더(김영삼)가 주축이 된 통일민주당(60석)의 합당이 갑자기 발표되었다. 과반 의석의 정당 없이 `4개의 정당(김대중이 주축이 된 평화민주당(71석)을 포함한다.)`이 균형을 이루던 상황을 해소하기 위해, 이른바 ‘보수 대연합’의 가치를 내걸고 합당을 진행했다. 3당 합당을 통해 보수주류 정당은, 이념적으로는 자유주의와 좌파를, 지역적으로는 전라권을 고립시키며 패권을 차지한다. 3당 합당 이후 30년 동안 몇 번에 걸친 합당과 분당이 있었지만, 3당 합당으로 형성된 보수주류 정당의 구성은 지금까지도 큰 변화 없이 이어지고 있다. 
 
@@ -98,20 +98,20 @@
 
 
 ### 미래통합당 - 보수주류 정당
-2017년 박근혜 대통령 탄핵 직후, 집권 보수정당이었던 새누리당은 크게 3가지 갈래로 갈라졌다. 박근혜의 탄핵을 적극 찬성한 세력이 "개혁적인 보수"를 내세우며 창당한 바른정당, 박근혜의 탄핵을 적극 반대하고 복권을 주장하는 세력이 창당한 2017년의 새누리당(p. XXX 참고), 그리고 기존의 새누리당이 이름을 바꾸었던 자유한국당. 각종 합종연횡을 통해, 바른정당과 자유한국당의 구성원들이 2020년에 다시 통합되어 미래통합당을 만든다. 미래통합당에 참여한 구성원은 새누리당 출신 뿐만 아니라, 2016년 총선의 제3세력 정당(국민의당, p. XXX 참고)에서 전라권 의원들과 거리를 두고 안철수 대표와 가까이하며 활동하던 의원들도 있었다. 
+2017년 박근혜 대통령 탄핵 직후, 집권 보수정당이었던 새누리당은 크게 3가지 갈래로 갈라졌다. 박근혜의 탄핵을 적극 찬성한 세력이 “개혁적인 보수”를 내세우며 창당한 바른정당, 박근혜의 탄핵을 적극 반대하고 복권을 주장하는 세력이 창당한 2017년의 새누리당(p. XXX 참고), 그리고 기존의 새누리당이 이름을 바꾸었던 자유한국당. 각종 합종연횡을 통해, 바른정당과 자유한국당의 구성원들이 2020년에 다시 통합되어 미래통합당을 만든다. 미래통합당에 참여한 구성원은 새누리당 출신 뿐만 아니라, 2016년 총선의 제3세력 정당(국민의당, p. XXX 참고)에서 전라권 의원들과 거리를 두고 안철수 대표와 가까이하며 활동하던 의원들도 있었다. 
 
-2020년 기준으로 보면 반-문재인 행정부의 기치 아래에 모인 정당이지만, 2017년 당시를 떠올리며 보면 미래통합당은 당시에 비해서도 극우화가 상당히 진행되었다. 이는 "보수개혁 정당"을 내세웠던 바른정당이 보수 내부의 여론 주도권을 결국 잡지 못한 것 때문에, 4~ 5차례의 집단탈당과 입당을 통해 자유한국당으로 흡수통합된 것과 다름없는 상황의 탓이 컸다. 국민의당(2016년) 출신 구성원들도 비슷한데, 문재인 행정부에 호의적이지 않은 정치인이 지역구에서 당선되기 위해서는 보수주류 정당 출신이 아니더라도 미래통합당에 편입되어야 한다고 판단한 것이다. 그와 동시에, 자유한국당은 새누리당(2017년)에 지지층을 빼앗기지 않기 위해 극우 대중집회에 적극 결합하는 모습을 보여주었다. 
+2020년 기준으로 보면 반-문재인 행정부의 기치 아래에 모인 정당이지만, 2017년 당시를 떠올리며 보면 미래통합당은 당시에 비해서도 극우화가 상당히 진행되었다. 이는 “보수개혁 정당”을 내세웠던 바른정당이 보수 내부의 여론 주도권을 결국 잡지 못한 것 때문에, 4~ 5차례의 집단탈당과 입당을 통해 자유한국당으로 흡수통합된 것과 다름없는 상황의 탓이 컸다. 국민의당(2016년) 출신 구성원들도 비슷한데, 문재인 행정부에 호의적이지 않은 정치인이 지역구에서 당선되기 위해서는 보수주류 정당 출신이 아니더라도 미래통합당에 편입되어야 한다고 판단한 것이다. 그와 동시에, 자유한국당은 새누리당(2017년)에 지지층을 빼앗기지 않기 위해 극우 대중집회에 적극 결합하는 모습을 보여주었다. 
 
 결과적으로 미래통합당의 등장으로 인해, 한국에서 보수/우파를 대표처럼 여겨지는 정당의 극우화는 더욱 가속화되었다. 자유한국당과 바른정당(바른미래당)의 경쟁은 열성적 극우 지지층을 더욱 결집시킨 자유한국당의 승리로 끝났다. 그 과정에서 자유한국당은 (대통령 선거가 아직 한참 남은 상황을 고려하더라도) 박근혜 행정부 시절의 정책적 방향성과 노선을 제대로 평가할 기회를 가지지 못했다. 미래한국당이 문재인 행정부의 정책행보를 파편적으로 반대하는 것을 넘어서서 자체적인 방향성을 갖추는 과정에서, 2020년 총선에서 당선될 국회의원들의 영향력이 많이 들어갈 것이다. 어쩌면 미래통합당의 미래는 2020년 총선 승리여부가 아니라, 2020년 총선에서 당선되는 구성원의 면면 그 자체에 따라 달라질 수도 있다.
 
 
 
 ### 미래한국당? - 어쩌면 반헌법적인? 보수주류 비례정당
-미래한국당이라는 정당은 2019년 12월 19일, 자유한국당(보수주류 정당) 원내대표 `심재철의 발언(<심재철 “연동형 밀어붙이면 비례한국당 만들 것”>, 동아일보, 2019/12/19)`으로부터 탄생했다. “만약 좌파세력 심상정, 정동영, 손학규, 박지원이 연동형을 밀어붙인다면 우리는 비례한국당을 만들 수 밖에 없다.” 보수주류 정당을 둘로 쪼개서, 한 정당은 지역구만, 다른 정당은 비례대표만 출마하면 새로 바뀐 선거제도에서 의석이 뻥튀기되는 것을 이용한 것이다. 2019년에 12월에 <공직선거법> 개정안이 통과되자 자유한국당은 본격적으로 비례대표용 위성정당의 창당을 준비했다. 자유한국당 부산시당 강당에서 미래한국당 부산시당 창당대회를 연다던가, 당명으로 "비례한국당"을 쓰려다가 중앙선관위가 등록을 거부하자 "미래한국당"으로 살짝 고쳐서 등록한다던가, 자유한국당 현역 의원을 미래한국당으로 입당킨다던가, 당이 추구하는 가치를 나타내는 `강령이 310자(미래한국당의 행성정당(?)인 미래통합당의 강령은 2300자에 달한다.)`에 불과한 등, 보수주류 정당의 적극적인 지원을 받아 급조된 정당이 2020년 2월 13일 중앙선관위 등록을 받아내며 창당하였다.
+미래한국당이라는 정당은 2019년 12월 19일, 자유한국당(보수주류 정당) 원내대표 `심재철의 발언(<심재철 “연동형 밀어붙이면 비례한국당 만들 것”>, 동아일보, 2019/12/19)`으로부터 탄생했다. “만약 좌파세력 심상정, 정동영, 손학규, 박지원이 연동형을 밀어붙인다면 우리는 비례한국당을 만들 수 밖에 없다.” 보수주류 정당을 둘로 쪼개서, 한 정당은 지역구만, 다른 정당은 비례대표만 출마하면 새로 바뀐 선거제도에서 의석이 뻥튀기되는 것을 이용한 것이다. 2019년에 12월에 <공직선거법> 개정안이 통과되자 자유한국당은 본격적으로 비례대표용 위성정당의 창당을 준비했다. 자유한국당 부산시당 강당에서 미래한국당 부산시당 창당대회를 연다던가, 당명으로 “비례한국당”을 쓰려다가 중앙선관위가 등록을 거부하자 “미래한국당”으로 살짝 고쳐서 등록한다던가, 자유한국당 현역 의원을 미래한국당으로 입당킨다던가, 당이 추구하는 가치를 나타내는 `강령이 310자(미래한국당의 행성정당(?)인 미래통합당의 강령은 2300자에 달한다.)`에 불과한 등, 보수주류 정당의 적극적인 지원을 받아 급조된 정당이 2020년 2월 13일 중앙선관위 등록을 받아내며 창당하였다.
 
 이것이 어떻게 가능했는가? 개정된 <공직선거법>은 모든 정당들에게 선거 1년 전까지 민주적인 비례대표 후보 선출 방식을 확정하여 중앙선관위에 제출하도록 하였다. 이를 통해 기존 정당들이 비례대표만을 위한 위성정당을 선거 직전에 창당할 것을 예방할 방법을 마련했다. 다만 2020년 총선에 한하여 선거일 1개월 전(3월 15일) 이전까지 이를 제출하도록 하였는데, 이것이 화근이 되었다. 
 
-현재 미래한국당과 가장 각을 세운 정당은 주요 경쟁자인 민주당계 정당들이 아니라, 사민주의 정당인 정의당이다. 중앙선관위가 미래한국당 정당등록을 받아준 것에 대해, 정의당은 "미래한국당은 설립 목적·조직·활동이 비민주적인 헌법 파괴 조직"이라며 헌법재판소와 서울행정법원에 각각 행위 취소 및 효력 가처분신청을 요청하는 소송과 헌법소원을 제기하였다. 이 중 단 하나라도 통과될 경우, 미래한국당은 후보를 내지 못하거나 당선된 비례대표 의원이 모두 의원직을 박탈당하는 사태가 일어날 수도 있다. 
+현재 미래한국당과 가장 각을 세운 정당은 주요 경쟁자인 민주당계 정당들이 아니라, 사민주의 정당인 정의당이다. 중앙선관위가 미래한국당 정당등록을 받아준 것에 대해, 정의당은 “미래한국당은 설립 목적·조직·활동이 비민주적인 헌법 파괴 조직”이라며 헌법재판소와 서울행정법원에 각각 행위 취소 및 효력 가처분신청을 요청하는 소송과 헌법소원을 제기하였다. 이 중 단 하나라도 통과될 경우, 미래한국당은 후보를 내지 못하거나 당선된 비례대표 의원이 모두 의원직을 박탈당하는 사태가 일어날 수도 있다. 
 
 
 
@@ -128,7 +128,7 @@
 #### 부산 남구 을
 **우파코인 Right-wing Coin**
 
-경기 광명시 을의 재선(2012~ 20) 국회의원 이언주는 4년간 급격한 성향 변화를 보였다. 더불어민주당으로 당선되었던 그는 2017년 대선 즈음에 문재인이 아닌 안철수 지지를 선언하며 국민의당에 입당하였고, 국민의당이 보수주류 정당 출신("개혁적인 보수정당")과 합당하여 바른미래당이 된 이후 스스로를 "강경한 자유주의 시장경제 지자자"라고 규정하며 활동하기 시작했다. 2020년 1월에 신당인 "미래를향한전진4.0"을 창당하여 독립한 이후 그는 보수주류 정당으로의 보수대통합을 주장했고, 결국 바른미래당을 탈당한 "개혁적인 보수정당"은 물론 자신까지 포함하여 새롭게 통합된 미래통합당이 출범하는 데 참여할 수 있었다. 
+경기 광명시 을의 재선(2012~ 20) 국회의원 이언주는 4년간 급격한 성향 변화를 보였다. 더불어민주당으로 당선되었던 그는 2017년 대선 즈음에 문재인이 아닌 안철수 지지를 선언하며 국민의당에 입당하였고, 국민의당이 보수주류 정당 출신(“개혁적인 보수정당”)과 합당하여 바른미래당이 된 이후 스스로를 “강경한 자유주의 시장경제 지자자”라고 규정하며 활동하기 시작했다. 2020년 1월에 신당인 “미래를향한전진4.0”을 창당하여 독립한 이후 그는 보수주류 정당으로의 보수대통합을 주장했고, 결국 바른미래당을 탈당한 “개혁적인 보수정당”은 물론 자신까지 포함하여 새롭게 통합된 미래통합당이 출범하는 데 참여할 수 있었다. 
 
 그가 광명에서의 3선을 포기하고 보수주류 정당이 당선되기 상대적으로 쉬운 부산에 공천된 것도, 그간의 과정에 대한 배려라고 할 수 있다. 물론 그렇다고 그가 당선이 확정적인 것은 아니다. 남구 을은 더불어민주당이 2016년 총선에서 승리한 부산의 5개 지역구 중 하나이다.
 
@@ -144,7 +144,7 @@
 #### 경기 성남시 분당구 갑/을
 **집 지키기 (2) + 새 집 짓기**
 
-보수주류 정당이 수성구 다음으로 탈환할 곳은 경기도의 성남 분당이다. 이 곳에는 보수주류 정당의 고전적인 지지층과 새로운 지지층으로 공략할 사람들이 모여있다. 분당에서 보수주류 정당의 고전적인 지지층은 90년대 신도시 개발과 함께 유입된, 부동산 위주로 많은 자산을 가졌고 교육열이 높은, 고학력 중산층이었다. 이 지지층이 워낙 탄탄하여, 보수주류 정당은 '성남시 분당구' 지역구가 신설된 1996년 이후 총선에서 단 한 번도 패배하지 않았다. 그것이 무너진 첫 사례는 2011년 분당구 을 보궐선거에서 손학규(민주당)가 당선된 것이었고, 2016년에 두 석 모두 더불어민주당(김병관, 김병욱)이 승리하면서 더욱 분명하게 드러났다. 
+보수주류 정당이 수성구 다음으로 탈환할 곳은 경기도의 성남 분당이다. 이 곳에는 보수주류 정당의 고전적인 지지층과 새로운 지지층으로 공략할 사람들이 모여있다. 분당에서 보수주류 정당의 고전적인 지지층은 90년대 신도시 개발과 함께 유입된, 부동산 위주로 많은 자산을 가졌고 교육열이 높은, 고학력 중산층이었다. 이 지지층이 워낙 탄탄하여, 보수주류 정당은 ‘성남시 분당구’ 지역구가 신설된 1996년 이후 총선에서 단 한 번도 패배하지 않았다. 그것이 무너진 첫 사례는 2011년 분당구 을 보궐선거에서 손학규(민주당)가 당선된 것이었고, 2016년에 두 석 모두 더불어민주당(김병관, 김병욱)이 승리하면서 더욱 분명하게 드러났다. 
 
 보수주류 정당이 새롭게 공략할 지지층은, 바로 젊은 IT산업 및 스타트업 종사자이다. IT산업단지 판교가 새로 개발되면서 판교에 새로 거주하게 된 이들의 표심은 상당히 유동적이다. 이들이 공유하는 탈권위적 정서가 지금까지는 보수주류 정당에게 불리하게 작용했지만, 마찬가지로 이들이 공유하는 행정부의 경직된 정책집행(특히나 새로운 산업을 대할 때 나타나는) 자체에 대한 거부감은 (어느 당이든) 집권하고 있는 당 자체에 대한 거부로 이어질 수 있다. 만약 보수주류 정당이 이 새로운 지지층을 잘 포섭하게 된다면, 분당에서의 선거 결과가 매우 흥미롭게 나타날 것이다. 
 
@@ -169,7 +169,7 @@
 ### 민생당 - 민주당계 전라권 제3정당
 앞서 “민주당계 정당” 부분에서 설명(p.XXX)한 그 민생당이 맞다. 민생당은 민주당계 정당이자, 전라권 제3정당이라고 분류할 수 있다. 이 정당은 2016년의 국민의당 당시, 과반 의석을 가진 정당이 없는 상태에서 38석의 거대한 제3세력으로 자리잡았다. 2016-2020 국회가 개원한 때는 대통령 선거가 1년 이상 남았던 시점이었기에, 국민의당에 소속된 유력 대선후보(안철수)를 중심으로 언론과 여론의 관심을 받을 수 있었다. 또한 국회 내 경험이 많은 중진 다선의원(박지원, 정동영, 천정배, 박주선, 주승용 등)이 두루 포진했기에, 따라서 국회 안에서 거대 양당 사이의 갈등을 모두 비판하며 동시에 중재역으로서 영향력을 발휘하는 행동이 가능했다.  
 
-국민의당은 2018년 초, 보수주류 정당의 박근혜 탄핵 찬성파, 이른바 "개혁적인 보수정당"(바른정당)과의 합당을 놓고 갈등을 벌였다. 합당 찬성파는 바른정당과 합당하여 바른미래당을 만들었고, 합당 반대파는 탈당하여 민주평화당을 만들었다. 그러나 두 당에 소속된 국민의당 출신 구성원은 대부분 더불어민주당-바른미래당-민주평화당-정의당으로 이어지는 국회 내 개혁입법연대의 일원으로 함께 합류했다. 이 때의 개혁입법연대는 `"유치원 3법"(4권 ‘위원회와 주요 이슈(2)’, p.XXX 참고)`, `공수처 설립(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)`, `선거제도 개편(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)` 등을 이뤄내는 데에 큰 역할을 한다. 이 때의 경험을 바탕으로 2020년에 과거 국민의당 구성원이 다시 민생당으로 합류하게 된다. (단, 입법연대에 소극적이었던 바른미래당의 보수주류 정당 출신 및 일부 비례대표 의원들은 2020년에 미래통합당(보수주류 정당)으로 합류한다.) 
+국민의당은 2018년 초, 보수주류 정당의 박근혜 탄핵 찬성파, 이른바 “개혁적인 보수정당”(바른정당)과의 합당을 놓고 갈등을 벌였다. 합당 찬성파는 바른정당과 합당하여 바른미래당을 만들었고, 합당 반대파는 탈당하여 민주평화당을 만들었다. 그러나 두 당에 소속된 국민의당 출신 구성원은 대부분 더불어민주당-바른미래당-민주평화당-정의당으로 이어지는 국회 내 개혁입법연대의 일원으로 함께 합류했다. 이 때의 개혁입법연대는 `“유치원 3법”(4권 ‘위원회와 주요 이슈(2)’, p.XXX 참고)`, `공수처 설립(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)`, `선거제도 개편(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)` 등을 이뤄내는 데에 큰 역할을 한다. 이 때의 경험을 바탕으로 2020년에 과거 국민의당 구성원이 다시 민생당으로 합류하게 된다. (단, 입법연대에 소극적이었던 바른미래당의 보수주류 정당 출신 및 일부 비례대표 의원들은 2020년에 미래통합당(보수주류 정당)으로 합류한다.) 
 
 ### 국민의당(2020년) - 대선후보 중심 제3정당
 만약 당신이 2016년 총선에 투표하고 4년 만에 다시 선거에 관심을 가지고 있다면 - 환영한다. 4년 전의 “국민의당”과 다른 새로운 “국민의당”이 2020년에 탄생했다. 이 신생 국민의당은 2016년의 국민의당 소속 의원 중에서, 대선후보 안철수와의 연결성이 강한 인물들이 중심이 되었다. 이태규(비례대표) 등의 비례대표, 또는 권은희(광주 광산구 을)처럼 전라권 지역구를 가지고 있지만 민주당계 정당에서의 활동이 길지 않았던 인물들이 창당에 참여했다. 
@@ -183,14 +183,14 @@
 #### 광주 서구 을
 **천정배, 천정배, 천정배**
 
-천정배라는 인물을 통해, "민주당계 전라권 제3정당"이라는 것이 형성된 배경을 좀 더 알아보자. 안산의 4선 의원(단원구 갑: 1996~ 2012)이자 2002년 대선후보 경선에서 처음부터 노무현을 지지했던 유일한 당시 현역의원, 노무현 행정부 시절의 법무장관과 집권당(열린우리당) 원내대표를 맡았던 천정배. 이렇게 민주당계 정당의 중진으로 입지를 다졌던 그는 2012년 '험지'인 서울 송파구 을에 출마했다가 불과 4%p의 득표율 차이로 낙선했는데, 그 이후 민주당계 정당에서의 활동에 거의 참여하지 못했고, 2015년 탈당하여 무소속으로 서구 을 보궐선거에서 당선되었다. 
+천정배라는 인물을 통해, “민주당계 전라권 제3정당”이라는 것이 형성된 배경을 좀 더 알아보자. 안산의 4선 의원(단원구 갑: 1996~ 2012)이자 2002년 대선후보 경선에서 처음부터 노무현을 지지했던 유일한 당시 현역의원, 노무현 행정부 시절의 법무장관과 집권당(열린우리당) 원내대표를 맡았던 천정배. 이렇게 민주당계 정당의 중진으로 입지를 다졌던 그는 2012년 ‘험지’인 서울 송파구 을에 출마했다가 불과 4%p의 득표율 차이로 낙선했는데, 그 이후 민주당계 정당에서의 활동에 거의 참여하지 못했고, 2015년 탈당하여 무소속으로 서구 을 보궐선거에서 당선되었다. 
 
 민주당계 정당의 중진으로 가지고 있었던 개인의 정치적 영향력, 그리고 총선에서의 (나름의) 희생적 행동에도 불구하고 역할을 부여받지 못한 상황. 이 두 가지가 겹치면서, 전라권 기반의 독자정당을 창당할 이유가 생긴 셈이다. 2016년 총선에서는 이 영향력이 십분 발휘되었다. 이 때 천정배는 더불어민주당 영입인사였던 양향자를 상대했고, 20%p 이상의 넉넉한 득표율 차이로 당선되었다. 4년이 지나서, 더불어민주당과 민생당은 이번에도 2명의 같은 후보를 나란히 단수공천했다.
 
 #### 광주 광산구 을
 **공익제보자와 제3세력 정당**
 
-광산구 을은 2020년 국민의당의 유일한 현역 지역구의원, 권은희의 지역구다. 권은희는 2016년에 국민의당으로 당선된 전라권 지역구 국회의원 중에서는 흔치 않게, 지역구 조직기반이 약하다는 특성을 가지고 있다. 그는 정치 입문 이전의 경찰 근무기간 중에 공익제보를 한 경력(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)으로 이미 전국적인 인지도는 가졌고, 안철수가 함께하던 시절의 민주당계 정당(새정치민주연합) 후보로 전략공천되어 2014년 보궐선거를 통해 당선되어 국회에 입성했기 때문이다. 이 점 때문에 권은희는 '전라권 의원'보다는 '안철수계 의원', 전라권 제3세력 정당이 전국적인 이슈에 대응할 때 앞장서는 의원이라는 성격이 좀 더 강한 편이었다. 권은희가 민생당이 아니라 국민의당으로 합류한 것도, 이런 배경에서 이해할 수 있다. 
+광산구 을은 2020년 국민의당의 유일한 현역 지역구의원, 권은희의 지역구다. 권은희는 2016년에 국민의당으로 당선된 전라권 지역구 국회의원 중에서는 흔치 않게, 지역구 조직기반이 약하다는 특성을 가지고 있다. 그는 정치 입문 이전의 경찰 근무기간 중에 공익제보를 한 경력(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)으로 이미 전국적인 인지도는 가졌고, 안철수가 함께하던 시절의 민주당계 정당(새정치민주연합) 후보로 전략공천되어 2014년 보궐선거를 통해 당선되어 국회에 입성했기 때문이다. 이 점 때문에 권은희는 ‘전라권 의원’보다는 ‘안철수계 의원’, 전라권 제3세력 정당이 전국적인 이슈에 대응할 때 앞장서는 의원이라는 성격이 좀 더 강한 편이었다. 권은희가 민생당이 아니라 국민의당으로 합류한 것도, 이런 배경에서 이해할 수 있다. 
 
 2020년 국민의당이 지역구 후보 무공천을 선언하면서, 광산 을에서 권은희가 자리를 비우게 되었다. 재미있는 것은 그 자리에 권은희와 굉장히 비슷한 성격을 가진 신인 후보, 민생당의 노승일이 새로 입후보한다는 점이다. 박근혜-최순실 게이트 당시, K-스포츠재단 부장으로 청문회에 증인으로 참석해 공익제보를 쏟아냈던, 바로 그 노승일이다. 
 
@@ -247,7 +247,7 @@
 #### 울산 동구, 북구
 **사민주의 정당과 민주노총**
 
-울산 동구와 북구에서 2016년에 당선된 두 명의 무소속 국회의원(김종훈, 윤종오)은 모두 민주노총이 주도하는 "노동자후보 단일화"를 통해 정의당 및 노동당 후보들과 단일화에 성공했고, 민주당계 정당 후보까지 단일화에 참여하게 만들었다. 결국 보수주류 정당 후보와의 1:1 구도를 만들고 당선되었다. 노동조합을 통해 조직된 생산직 노동자가 가장 밀집된 울산(6권 ‘남부지방 권역’, p.XXX 참고)에서는 이처럼 "노동자를 대표하는 국회의원"을 당선시켜서 정치세력화하려는 움직임이 언제나 있었다. 과거 민주노동당-통합진보당 소속이었던 김종훈과 윤종오는 당선 이후 민중당을 창당하였고, 이후 정의당, 노동당과의 경쟁과 연대를 통해 사민주의 정당 전체의 세를 확장하는 데에 나서기도 했다. 
+울산 동구와 북구에서 2016년에 당선된 두 명의 무소속 국회의원(김종훈, 윤종오)은 모두 민주노총이 주도하는 “노동자후보 단일화”를 통해 정의당 및 노동당 후보들과 단일화에 성공했고, 민주당계 정당 후보까지 단일화에 참여하게 만들었다. 결국 보수주류 정당 후보와의 1:1 구도를 만들고 당선되었다. 노동조합을 통해 조직된 생산직 노동자가 가장 밀집된 울산(6권 ‘남부지방 권역’, p.XXX 참고)에서는 이처럼 “노동자를 대표하는 국회의원”을 당선시켜서 정치세력화하려는 움직임이 언제나 있었다. 과거 민주노동당-통합진보당 소속이었던 김종훈과 윤종오는 당선 이후 민중당을 창당하였고, 이후 정의당, 노동당과의 경쟁과 연대를 통해 사민주의 정당 전체의 세를 확장하는 데에 나서기도 했다. 
 
 #### 경기 안양시 동안구 을, 경북 경주시
 **지역구 좀 가지게 해주세요**
@@ -299,7 +299,7 @@
 
 비례대표 정당투표를 놓고 보면, 기독자유당의 김천에서의 성적은 매우 특이했다. 2012년과 2016년 총선 사이에, 김천시의 보수주류 정당(새누리당) 득표율(2012년 73.31%, 2016년 57.49%)은 15.82%p나 하락했는데, 민주당계 정당(민주통합당, 더불어민주당) 득표율(2012년 12.65%, 2016년 11.72%)도 증가하지 않았다. 수치로만 보면, 새누리당에서 이탈한 지지층 대부분이 2016년의 신생정당인 국민의당(14.27%)과 기독자유당(6.66%)으로 흡수되었다. 김천시의 기독자유당 득표율은, 기독자유당으로 입당하여 비례대표로 출마했던 이윤석의 지역구인 전남 신안군(8.53%)과 무안군(7.53%) 다음으로 전국에서 가장 높은 수치였다. 
 
-김천에서의 결과를 이렇게 해석해보자. "새누리당의 지지층이 중도적인 제3세력 정당과 극우적 종교정당으로 갈라졌다." 그렇다면 기독자유당이 2016년 총선에서 얻은 최대치의 득표율(전국 득표율 2.63%)은 종교정당보다는 극우정당에 대한 지지였을 가능성이 있다. 어엿한 극우정당이 새로 생긴 상황에서, 이 지지율은 과연 종교정당에게 남아있을 것인가, 아니면 극우정당으로 이동할 것인가? 김천에서의 선거결과가 이를 확인하는 바로미터가 될 것이다. 
+김천에서의 결과를 이렇게 해석해보자. “새누리당의 지지층이 중도적인 제3세력 정당과 극우적 종교정당으로 갈라졌다.” 그렇다면 기독자유당이 2016년 총선에서 얻은 최대치의 득표율(전국 득표율 2.63%)은 종교정당보다는 극우정당에 대한 지지였을 가능성이 있다. 어엿한 극우정당이 새로 생긴 상황에서, 이 지지율은 과연 종교정당에게 남아있을 것인가, 아니면 극우정당으로 이동할 것인가? 김천에서의 선거결과가 이를 확인하는 바로미터가 될 것이다. 
 
 
 ## 신진 원외 진보정당
