--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -42,7 +42,7 @@
 ### 민생당 - 민주당계 전라권 제3정당
 민생당은 2016년에 창당한 국민의당 구성원 중, 전라권 기반 또는 기존에 민주당계 정당에 소속되었던 인물들이 주축이 되어 구성된 정당이다. 현재 더불어민주당 지도부와 민생당 구성원의 유서깊은 갈등은 2000년대 초반부터 진행되었다(6권 ‘남부지방 권역’, p.XXX 참고). 민주당계 정당이 하나로 통합되어 있던 시절에는, 당의 주요 지지층인 전라권 유권자와 자유주의적 관점을 가진 지지자 사이에 뚜렷한 관점 차이가 존재했다. 민생당은 이 중에서 전라권 유권자 또는 상대적으로 보수적인 전통적 민주당계 지지자를 타겟으로 만들어진 정당이라고 할 수 있다. 그러나 민생당 역시 민주당계 정당으로서, 더불어민주당과 마찬가지로 반-보수주류 정당, 남북관계 화해 등을 추구하고 있다는 공통점이 있다. 이 때문에 민생당의 성격을 명확하게 구분하여 설명하기는 어렵다. 
 
-민생당의 성격을 맥락으로 이해하기 위해, 2016년에 새정치민주연합(더불어민주당의 전신)에서 분당되어 탄생한 국민의당을 잠깐 설명해보자. 2015년 문재인이 새정치민주연합 대표로 취임한 이후, 안철수, 박지원, 문병호, 김관영, 주승용 등이 시간을 두고 탈당하여 국민의당을 창당하고, 여기에 이미 재보궐선거 출마를 위해 탈당한 상태였던 정동영, 천정배, 박준영 등이 합류했다. 창당 당시 국민의당은 “호남정치의 복원”, “민주당 내 친문패권주의 타파”, “중도개혁세력 결집” 등을 내걸었다. 2016년 총선 당시, 국민의당의 지역구 후보들은 대부분 민주당계 정당 출신, 혹은 전라권에서 무소속으로 출마한 경험이 있는 인물들이었다. 제3정당으로서 민생당의 성격은 “제3세력 정당” 부분(p. XXX)에서 설명해보자. 
+민생당의 성격을 맥락으로 이해하기 위해, 2016년에 새정치민주연합(더불어민주당의 전신)에서 분당되어 탄생한 국민의당을 잠깐 설명하겠다. 2015년 문재인이 새정치민주연합 대표로 취임한 이후, 안철수, 박지원, 문병호, 김관영, 주승용 등이 시간을 두고 탈당하여 국민의당을 창당하고, 여기에 이미 재보궐선거 출마를 위해 탈당한 상태였던 정동영, 천정배, 박준영 등이 합류했다. 창당 당시 국민의당은 “호남정치의 복원”, “민주당 내 친문패권주의 타파”, “중도개혁세력 결집” 등을 내걸었다. 2016년 총선 당시, 국민의당의 지역구 후보들은 대부분 민주당계 정당 출신, 혹은 전라권에서 무소속으로 출마한 경험이 있는 인물들이었다. 제3정당으로서 민생당의 성격은 “제3세력 정당” 부분(p. XXX)에서 설명하겠다. 
 
 
 ### 열린민주당 - 민주당계 비례정당
@@ -254,7 +254,7 @@
 
 지역구 당선자를 배출하는 것은 사민주의 정당의 오랜 숙원이다. 그 지역이 사민주의 정당의 새로운 지지기반이 될 수도 있을 뿐만 아니라, 의정활동 경험을 쌓은 당내 국회의원을 육성하려면 비례대표 국회의원이 (관례상 다음 선거에 비례대표로 출마하지 않기 때문에) 다음 선거의 지역구에서 당선되어 돌아와야 하기 때문이다. 사민주의 정당의 비례대표 의원들은 승산이 있거나 연고가 있는 지역구를 미리 지정하여 오래 전부터 지역기반을 다지기 마련이다. 물론 당선이 어렵기 때문에, 현역 의원이라도 한 번 지역구에서 낙선 이후 재도전하기란 쉽지 않다.
 
-이 관점에서 2020년 총선에서 특히 주목할 곳이 이 두 곳이다. 안양 동안 을에서는 정의당이 2회 연속으로 현역 국회의원(2016년 정진후, 2020년 추혜선)을 출마시켰고, 경주에서는 “용산 참사”(2009년 서울 용산에서 건물 철거를 반대하며 농성하던 세입자를 경찰이 진압하는 도중 화재가 발생해, 세입자 5명과 경찰 1명이 사망한 사건. 당시 서울지방경찰청장이 김석기, 이 사건의 유가족 변호인이 권영국이었다.) 유가족 변호인으로 보수주류 정당 후보를 저격하기 위해 2016년에 출마한 바 있는 권영국이 정의당에 입당하여 두 번째로 도전한다. 
+이 관점에서 2020년 총선에서 특히 주목할 곳이 이 두 곳이다. 안양 동안 을에서는 정의당이 2회 연속으로 현역 국회의원(2016년 정진후, 2020년 추혜선)을 출마시켰고, 경주에서는 `“용산 참사”(2009년 서울 용산에서 건물 철거를 반대하며 농성하던 세입자를 경찰이 진압하는 도중 화재가 발생해, 세입자 5명과 경찰 1명이 사망한 사건. 당시 서울지방경찰청장이 김석기, 이 사건의 유가족 변호인이 권영국이었다.)` 유가족 변호인으로 보수주류 정당 후보를 저격하기 위해 2016년에 출마한 바 있는 권영국이 정의당에 입당하여 두 번째로 도전한다. 
 
 ## 극우정당 및 종교정당
 **대다수 유권자의 생각이 갑자기 변화하면, 이를 완강하게 거부하는 유권자에게는 ‘극우’라는 평가가 따라온다. 따라서 정치격변의 시기에는 극우의 몸집이 커지게 된다.**
