--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -86,13 +86,22 @@
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 #### “일 잘하는 직장” 만들기
+국회는 국회의원, 보좌관, 정책 연구원(국회 내의 공무원)들의 직장이라고 할 수 있다. 그렇다면, “일 잘하는 국회”를 만들기 위해서는 “일 잘하는 직장”을 만드는 방법을 떠올리면 좋다. 회사에 프로젝트가 너무 많으면 국회의원이나 보좌관 등 직원을 더 ‘채용’해야 하고, 능력있는 사람들이 ‘회사’에 지원하도록 적정한 연봉과 충분한 휴가를 보장해야 하며, 본인 업무에 집중할 수 있도록 충분한 자료와 업무지원을 해주는 조직(국회사무처, 국회도서관, 국회예산정책처, 국회입법조사처 등)을 강화해야 한다. 이런 정책은 당연히 행정부가 제안하거나 추진할 수 없고, 회사(국회) 스스로 진행해야 한다. 
 
+문제는 국회가 직접 이런 일을 추진할 경우, “일 못하는 국회의원들이 또 스스로 특권을 만든다”고 주장하는 반대 여론이 너무 커진다는 것이다. 국회를 일 잘하는 직장으로 만들기 위해서는 결국, 입법 활동이나 행정부 질의 활동을 잘 하는 국회의원을 언론과 정치덕후들이 많이 조명해서 “일 잘하는데 고생하는 사원”들을 알리는 방법 밖에 없을 것이다. 
 
 #### “입사지원 자격 넓히기”
+국회라는 직장에 입사하기 위해서는 아주 어려운 면접을 거쳐야 한다. 이 면접은 회사(국회)가 운영하는 서비스를 이용하는 모든 고객(유권자)을 직접 찾아가서 자신을 홍보하고 고객의 표를 받는 방식으로 진행된다. 문제는 그 비용이다. 고객을 찾아가는 데 필요한 교통비, 홍보물 인쇄비, 사무실 임대료 등등의 비용은 모두 면접 참가자가 직접 부담해야 한다. 
+
+<공직선거법>이 규정하는 국회의원 후보 1인의 최대 선거비용은 `지역구마다(<공직선거법> 제121조1항에서, 지역구국회의원 선거비용제한액은 1억원＋(인구수×200원)＋(읍·면·동수×200만원) 으로 규정하고 있다.)` 약 1억 2천만원 내외인데, <공직선거법> 제122조의2는 지역구에서 15% 이상 득표한 후보에게만 이 비용의 전액을, 10% 이상 득표한 후보에게만 이 비용의 반액을 나중에 비용처리해서 보전해주도록 하고 있다. 더구나 각 정당의 경선과정에서 사용한 선거비용은 보전비용에서 제외된다. 정치에 처음 입문하고 금전적 자산이 별로 없는 후보, 특히 연령대가 어린 후보는 경선에서든 본선에서든 필연적으로 거액의 빚을 지게 되어있다. 이렇게 입사지원 자격이 까다로우면, 능력있는 사람이 입사신청을 할 가능성은 점점 낮아진다. 
+
+‘’지원자격’의 문제는 이 뿐만이 아니다. 선거권자 연령이 지속적으로 확대된다면, 대통령은 만 40세, 국회의원 및 그 외 선출직공무원은 만 25세 이상이어야 입후보할 수 있다는 지원자격 제한의 근거에 대한 이야기도 논의될 수 있다. (1권 ‘선거 개괄’, p. XXX 참고)
 
 
 #### “업무체계·회의체계” 만들기
+국회의 업무체계와 회의체계에 따라, 국회의 업무방식과 행정부의 업무방식, 더 나아가 한국의 정치가 굴러가는 구조가 정해진다. 요컨데 법안을 심사할 때, 국회의원 전원이 모인 본회의에서 먼저 토론하느냐, 아니면 특정 분야를 전문적으로 토론하는 상임위원회에서 먼저 토론하느냐에 따라, 법안토론에서 중요하게 다뤄지는 내용과 통과여부가 달라질 수 있다. 또다른 예시로, 국회에서 안건심사를 전문적으로 하는 `입법공무원(<국회법> 제42조에 의해 각 (상임)위원회별로 전문위원, 입법심의관, 입법조사관 등의 공무원이 배정된다. 이들은 법률안, 예산안, 청원 등의 안건을 검토하여 의원들에게 보고한다.)`들이 토론 전에 먼저 검토내용을 보고하게 되어 있다. 따라서 안건에 문제의식을 가진 국회의원이 있더라도, 입법공무원이 별다른 문제가 없다고 먼저 보고해버리면 토론이 제대로 진행되지 못하는 때가 많다. 
 
+그렇다면, 국회가 안건을 제대로 논의하거나 국정 전반을 제대로 토의하길 원하는 유권자라면, 국회의 업무체계와 회의체계를 어떻게 바꿔야 하는지 사람들과 함께 고민하고, 이를 여론화하여 국회의원들이 <국회법>을 개정하도록 유도하는 것이 필요할 수 있겠다. 마치 직장에서 효율적이고 정확한 업무진행을 위해 업무체계와 회의체계를 정하듯이.
 
 - - -
 
@@ -138,22 +147,36 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
-#### 부패한 판사의 탄핵
+#### “이상한” 판사의 탄핵
+법치국가가 잘 굴러가기 위한 전제조건 하나, 판사가 “이상한 사람이 되지 않도록 견제해야 한다. 여기서 말하는 “이상한 사람”이라는 기준은 사람마다 매우 주관적이겠지만, 적어도 모든 사람이 동의할 수 있는 심각한 경우는 존재할 것이다. 사법부와 법관 개인이 공정한 재판을 할 것이라는 확신을 깨뜨려버릴 정도의 심각하게 헌법이나 법률을 위반한 행위를 말한다. 예를 들어, 판사들의 ‘판결 성향’을 구분하여 승진에 영향을 미치려고 한 법원행정처의 법관들은 판사에서 제명해야 하며, 지하철 불법촬영 현행범으로 체포된 판사는 관련 범죄에 대한 판결을 매우 이상하게 할 가능성이 높으므로 역시 제명해야 한다. 
 
-판결의 공정
+행위 그 자체만으로 판사를 파면할 수는 없다. 판사를 파면하기 위해서는 대통령과 마찬가지로, 반드시 국회의 탄핵소추가 필요하다. <대한민국헌법>에 따라 국회는 재적의원 과반의 찬성으로 법관의 탄핵소추를 할 수 있고(제65조), 헌법재판소에서 재판관 6명 이상이 찬성하여 법관의 파면을 결정할 수 있다(제113조). 현재의 헌법이 시행된 1988년 이래, 한국에서는 아직 판사의 탄핵소추가 발의된 적이 없다. 
 
 #### “일 잘하는 직장” 만들기 (2)
 
+법치국가가 잘 굴러가기 위한 전제조건 둘, 판사가 일을 잘 할 여건을 만들어줘야 한다. 적절한 판결문은 판사의 머리 속에서 거져 생기는 것이 아니다. 판사는 사건정황과 증거의 의미를 잘 파악해야 하고, 법률을 해석하는 과정에서 법률 내용을 사건에 맞추어 치밀하게 분석해서 판단해야 한다. 이 때 법률의 판단을 받아야 하는 사건들은 일반 시민들의 일상 속에서 벌어지므로, 각 사건을 법률의 본래 취지에 맞게 해석하려면 그 다양한 삶에 대한 이해가 있어야 한다. 안희정 전 충남도지사의 성폭행 사건을 예시로 들면, 당시 폭행의 상대였던 비서직원과의 관계에서 ‘업무상 위계’가 있었는지 판단이 필요한데, 이를 위해서는 비서직원과 상사의 업무적 관계, 의사소통에서의 문제, ‘일자리를 잃을 수도 있다는 불안감’ 등등을 모두 이해해야 한다. 
+
+그런데 그 역할을 맡아야 하는 법관의 ‘법원에 출퇴근하는 직장인으로서의’ 삶은 보통 이와 거리가 멀기 때문에, 법관에게는 많은 자료조사와 연구와 고찰의 시간이 필요하다. 반대로 말하면, 송사가 걸리 당사자에게는 일생의 매우 중요한 사건에 대한 판결임에도 불구하고, 많은 법관들이 몰려드는 사건을 처리하느라 이런 시간을 많이 투입하지 못한 채 판결을 내리는 것이 현실이다. 개별 판사의 판결에 불만을 느끼는 시민들에게, 사법부의 개혁에서 가장 중요한 것은 이런 문제일지도 모른다. 
 
 #### 고위공직자범죄수사처
+
+공수처가 도입되면서, 고위공직자에게 적용되는 사법절차는 지금까지와 상당히 다르게 되었다. 지금까지는 모든 형사사건의 수사를 검찰이 지휘하고, 수사를 위한 압수수색이나 구속을 허락받는 영장을 법원에 신청하는 것도 검찰이고, 수사내용에 따라 법원에 기소할 것인 여부도 검찰이 결정하며, 법원에서 유죄를 주장하는 업무도 검찰이 진행했다. 이처럼 검찰이 단독으로 맡는 역할이 너무 많다보니 검찰이 수사를 제대로 하지 않거나 별 혐의가 없는데도 과도하게 수사를 진행하는 경우, 특히 검찰 및 검사의 위법행위에 대한 수사가 진행되지 않는 경우에 대한 불만이 터져나왔다. 
+
+공수처가 도입되면서, 대통령 등 고위공무원, 국회의원, 법관, 검사, 경찰 및 그 친인척에 대한 수사를 할 수 있는 두 번째 기관이 탄생했다. 특히 법관, 검사, 경찰에 대해서는 공수처가 법원에 기소를 직접 할 수도 있게 되어서, 검찰과 공수처와 경찰이 권한을 남용하지 않도록 서로 견제하는 것도 일정 부분 가능해졌다. 공수처가 처음 탄생하는 기관인 만큼, 공수처가 수사에서의 중립성을 확보하기 위해 설립 초기(2020년 7월 설치 예정)부터 국회가 감시하거나 추가 입법을 해야 하는 상황이 얼마든지 발생할 수 있다. 이는 2020년에 새로 구성되는 국회에서 오랜 기간동안 중요 이슈가 될 것이다. 
 
 
 #### “검찰이 왜 (꽃) 거기서 나와?”
 
+한국 검찰이 (부정적인 의미에서) 정치적이라고 평가받는 이유 중에는, 사법의 판단을 받아야 할 안건을 정치적인 이유로 조사하지 않거나, 정치를 통해 해법을 찾아야 할 안건에 사법조사를 들이대는 경우가 많기 때문이라는 의견이 있다. 2019년에 이와 관련하여 가장 논란이 되었던 사건 2개가 있다. 
+
+하나는 보수주류 정당(자유한국당) 국회의원 및 소속 보좌관들이 국회에서 선거제도 개정과 공수처 설치 법안을 신속처리안건으로 지정하는 회의가 열리지 않도록 하기 위해 국회 복도 및 회의실을 무단 점거하고 타인의 출입을 막은 사건이다(p. XXX 참고). 이른바 “국회선진화법(<국회법>)”과 <공직선거법>에 의해, 이상의 행위에 참가한 사람들은 500만원 이상의 벌금을 받고 5년간 피선거권이 박탈될 수도 있는 매우 중대한 사안이었다. 그러나 경찰이 수사하던 사건을 검찰이 수사권을 발동해 가져간 뒤, 수사의 진척이 거의 없었다. 
+
+또 하나는 렌트카 서비스인지 유사택시 서비스인지 의견이 분분한 스타트업 ‘타다’(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고)의 대표를 <여객자동차운수사업법> 위반 혐의로 기소한 것이다. 당시 타다를 비롯해서 택시와 유사한 다양한 신규 운수사업자들의 사업형태를 어떻게 정리할 것인지에 대한 입법을 행정부, 국회, 각 사업자가 합의를 진행하고 있던 상황이었다. 이 시점에서 벌어진 검찰의 타다 기소는, 정치를 통해 산업/교통분야 갈등의 해법을 찾아가던 과정에서 갑자기 사법이 개입되도록 했다는 점에서 검찰이 과도하게 개입했다는 비판을 받았다. 
+
 
 #### 두 명의 50대 남성 공직자
 
-2019년 하반기 중앙정계를 가장 화려하게 수놓은 이름, 조국 전 법무부 장관과 윤석열 검찰총장. 
+2019년 하반기 중앙정계를 가장 화려하게 수놓은 이름, 조국 전 법무부 장관과 윤석열 검찰총장. 두 명의 50대 남성 공직자의 역할, 임명, 사직, 수사, 신변, 정치적 의미와 여론 등의 주제는, 앞서 살펴본 4가지 주제에 비하자면, 시민의 삶과 공화국 체제에 영향을 끼치는 “사법부 및 법률 집행 관련” 이슈로서의 중요성이 한참 떨어진다고 판단하였다. 그에 따라, 이 내용은 다루지 않는다. 
 
 
 
@@ -204,7 +227,7 @@
 ### 예산결산특별위원회(예결위)
 예산결산특별위원회는 중앙정부의 예산안, 기금운용계획안, 세입세출결산 및 기금결산을 비롯한 재정 사용을 인준하고 감시한다. 국회는 매년 6월부터 8월까지 작년도 재정수입·지출이 예산안에 맞게 잘 집행되었나 심사하는 결산을 진행하고, 9월부터 `12월까지(〈대한민국헌법〉 제54조2항에 의해 국회는 예산안을 전년도 12월 2일까지 통과시켜야 한다. 그러나 예산안을 놓고 진행되는 각종 협상과 논쟁 때문에 이 기한은 잘 지켜지지 않는다. 2020년도 예산안은 2019년 12월 10일에 본회의를 통과했다.)` 내년도 재정수입·지출 계획을 담은 예산안을 심사한다. 먼저 상임위가 자신이 담당하는 정부부처의 결산·예산안 심사를 진행하고, 예결위는 그 결과를 수합하여 전체적인 심사를 진행한다. 또한 국회법(제83조의2)에 따라 재정 관련 법률안이나 ‘대규모 예산·기금 조치를 수반하는 법률안’은 담당 상임위와 예결위가 반드시 협의를 거쳐야 한다. 뿐만 아니라, 연도 중간에 대규모 재해나 경기침체에 따라 추가로 편성하는 예산(추가경정예산)안이 올라오면 그것의 심사도 담당한다. 
 
-다른 특별위원회와 달리, 예결위는 의원들이 돌아가며 50명씩 1년간 임기를 맡는 형식으로 상시 운영된다. 예결위 소속 의원은 매우 많은 업무를 맡는 만큼 권한이 상당하다. 정부가 재정을 투입한 수천 수만가지 세부사업의 예결산을 모두 살펴야 하는데, 그 규모가 1년에 약 500조 원, 의원 1인당 10조(=100,000억)원에 달하므로 격무에 시달린다. 반대로 의원 본인이 관심있는 분야의 예산을 더 챙길 수 있는 장점이 있다. 특히 자기의 지지기반인 특정 지역구나 계층 사람들이 수혜를 받는 사업의 필요성을 역설하고 예산을 늘리도록 행정부와 동료 의원들을 설득할 힘을 가진다. 이것이 너무 즉흥적으로 이뤄지면, 심사회의 도중에 예산 증액을 부탁하는 메모를 의원끼리 마구 주고받는 ‘쪽지예산’의 풍경을 볼 수 있다. 그러나 이것도 각 지역구와 계층의 이익을 놓고 협상하여 서로 만족하는 합의를 이끌어내는 과정이라고 여긴다면, 해당 집단의 이익을 대변할 사람 1명을 예결위에 소속시키는 것은 민주주의에서 매우 중요한 일이다. 
+다른 특별위원회와 달리, 예결위는 의원들이 돌아가며 50명씩 1년간 임기를 맡는 형식으로 상시 운영된다. 예결위 소속 의원은 매우 많은 업무를 맡는 만큼 권한이 상당하다. 정부가 재정을 투입한 수천 수만가지 세부사업의 예결산을 모두 살펴야 하는데, 그 규모가 1년에 약 500조원, 의원 1인당 10조(=100,000억)원에 달하므로 격무에 시달린다. 반대로 의원 본인이 관심있는 분야의 예산을 더 챙길 수 있는 장점이 있다. 특히 자기의 지지기반인 특정 지역구나 계층 사람들이 수혜를 받는 사업의 필요성을 역설하고 예산을 늘리도록 행정부와 동료 의원들을 설득할 힘을 가진다. 이것이 너무 즉흥적으로 이뤄지면, 심사회의 도중에 예산 증액을 부탁하는 메모를 의원끼리 마구 주고받는 ‘쪽지예산’의 풍경을 볼 수 있다. 그러나 이것도 각 지역구와 계층의 이익을 놓고 협상하여 서로 만족하는 합의를 이끌어내는 과정이라고 여긴다면, 해당 집단의 이익을 대변할 사람 1명을 예결위에 소속시키는 것은 민주주의에서 매우 중요한 일이다. 
 
 - - -
 
@@ -231,22 +254,36 @@
 
 그러나 2016-20년 국회는 예산안 합의에 참여할 수 있는 15~ 40여 석 규모의 제3정당(국민의당, 바른정당, 바른미래당, 민주평화당, 대안신당 등)이 등장해서, 협상을 통해 각 당이 연합하여 안정적인 과반수 동의를 만들곤 했다. 2019년도 예산안이 더불어민주당-자유한국당의 동의로 통과되었고, 2020년도 예산안은 더불어민주당-바른미래당-대안신당-민주평화당-정의당의 동의로 통과되었다. 이 과정을 거쳐 `예산이 그나마 빠르게 통과되는(2016-2020 국회에서 예산안 처리가 매해 12월 10일을 넘긴 적은 없었다. 반대로, 2012-16 국회에서는 2013, 2014년도 예산안이 각각 연도를 넘겨서 1월 1일에 통과되었다.)` 유의미한 기록을 남겼다. 2020년 총선 이후 구성될 국회가 예산안을 협상하고 통과시키는 과정 역시, 각 정당 의석수에 따른 국회 구성에 따라 영향을 많이 받을 것이다.
 
+<!--
 #### 내 난방비! 내 마스크!
-앞서 말했듯 중앙정부의 1년 예산은 500조 원에 이르고, 이를 전부 꼼꼼히 검토하고 토론하는 것은 300명 뿐인 의원들에게 물리적으로 불가능하다. 따라서 예산심사 과정에서 몇십 초 안에 검토를 끝내고 정리하거나, 각 정당 지도부의 정치협상 과정에서 여러 쟁점법안과 함께 묶어서 합의처리하는 내용이 상당히 많다. 문제는, 이 과정에서 전혀 예상치 못한 엉뚱한 예산삭감이 일어난다는 점이다. 삭감된 예산에 대한 비판은 예산안이 국회를 통과하는 12월 말 ~  1월 초에 
+앞서 말했듯 중앙정부의 1년 예산은 500조원에 이르고, 이를 전부 꼼꼼히 검토하고 토론하는 것은 300명 뿐인 의원들에게 물리적으로 불가능하다. 따라서 예산심사 과정에서 몇십 초 안에 검토를 끝내고 정리하거나, 각 정당 지도부의 정치협상 과정에서 여러 쟁점법안과 함께 묶어서 합의처리하는 내용이 상당히 많다. 문제는, 이 과정에서 전혀 예상치 못한 엉뚱한 예산삭감이 일어난다는 점이다. 삭감된 예산에 대한 비판은 예산안이 국회를 통과하는 12월 말 ~  1월 초에 
+-->
 
 #### 증세냐 감세냐
-사실 
+증세와 감세의 문제는 단순히 세금을 더/덜 내는 문제만이 아니다. 이는 소득과 국가에 대한 철학을 반드시 다루는 문제이다. 세금은 소득이 창출되는 곳, 또는 민간 활동에서 ‘공공에 부담이 발생하는 분야’에 매겨진다. 또한 이렇게 거둬들인 세금은 행정부가 일을 하는 데에 쓰인다. 따라서 증세/감세의 문제는 곧, (1)어떤 것을 소득으로 인정할 것이냐? (2)국가는 어떤 일을 해야 하는가? 어디까지 국가가 관할해야 하는가? 에 대한 철학적 질문으로 이어진다.
+
+정책을 연구하고 제안하는 학계에서 제안되는 세금 관련 정책은 여러가지가 있다. 이를 크게 3가지로 나누어 보자. 첫째, 기존의 (근로)소득세, (금융)소득세, 재산세, 종합부동산세 등의 증/감세 문제가 있다. 증세에 대해서도, 고소득자·고액자산자에 대해 증세하여 빈부격차를 줄이자는 방안과, 계층 구분없이 전반적으로 증세하되 그 금액으로 복지제도를 확충하자는 방안이 서로 논쟁을 벌인다. 둘째, 마땅히 거두어져야 하나 발굴되지 않은 소득원을 발굴하는 문제가 있다. 주택 임대료, 증여·상속액의 누락분, 사업거래를 통한 수입의 누락분 등을 발굴하는 작업을 말한다. 셋째, 새로운 세목을 만드는 것이다. 시대변화에 따라 새로이 세금을 거둬야 하는 소득 종류가 발생하거나, 공공이 대응해야 할 문제를 다루기 위해 세금을 거둬야 하는 내용이 생긴 것이다. 탄소세(방출하는 이산화탄소의 양에 따른 세금 부과), 토빈세(자본시장을 교란시킬 수 있는 단기 외환거래에 대해 세금 부과), 구글세(한국에서 영업하는 외국 인터넷서비스 기업에게도 일정한 법인세 또는 관세 개념의 세금 부과), 데이터세(수익창출원이 되는 개인정보 및 빅데이터를 수집한 기업에 대해 세금 부과) 등이 여기에 해당한다. 
 
 
-#### 갑에게 줄까, 을에게 줄까?
+#### 돈을 갑에게 줄까, 을에게 줄까?
+모든 행정부처의 사업계획과 예산을 정리하여 “예산안 정부안”을 작성하는 기재부 공무원의 입장에서는, 예산을 써서 어떤 정책을 실행하면 예산을 쓴 만큼의 확실한 효과가 나타나길 기대하게 된다. 그렇다면 같은 돈을 투입하더라도, 누구에게 돈을 지급해야 더 효과가 좋을지 고민하게 된다. 이 단계에서 정책 측면에서의 이념성향 차이가 드러난다. 
+
+예시로, 국가적 재난에 의해 야외출입이 뜸해져 “1층 자영업”의 불황이 심각해진 상황을 가정해보자. 자영업자와 자영업에 고용된 노동자가 생계를 이어갈 수 있도록 10조원의 정부자금을 통한 긴급지원을 한다면, 그 ‘긴급지원’의 방법은 무엇이 있을까? 여러가지 방법이 있다. (1)자영업자 및 노동자에게 ‘재난 긴급지원소득’으로 월 50만원씩 통장에 입금. (2)자영업자 및 노동자의 사업/근로소득세를 일시 감면하는 데에 활용. (3)자영업자가 담보나 대출심사 없이 긴급하게 은행대출을 받을 수 있도록 은행에 긴급대출자금으로 지원. (4)임대료를 자발적으로 낮추는 건물 임대인에게 임대료 소득세를 일시 감면하는 데에 활용.
+
+이처럼 같은 금액을 같은 목적으로 사용하더라도, 이를 집행하는 정책의 방법은 완전히 다를 수 있다. 또한 그 효과에 대한 평가도 완전히 다를 수 있다. 예를 들어 (4)를 지지하는 경우는, 건물주가 자발적으로 손해를 감수하고 임대료를 낮추도록 유도함으로서, 정부 재정을 상대적으로 적게 쓰면서도 혜택을 보는 자영업자가 더 많아지도록 하는 가장 좋은 방법이라고 주장할 수 있다. 반대로 (1)을 지지하는 경우는, 지금 당장의 생활자금이 끊긴 자영업자와 노동자에게 직접적이고 즉각적인 혜택을 부여함으로서 이들이 재정적, 심리적으로 안정되게 하는 가장 좋은 방법이라고 주장할 수 있다.
 
 
-#### 공공부문 정규직과 비정규직
-한국도로공사를 심사하는 국토교통위원회의 소관이지만, 
+#### 공공부문 정규직화와 인력 증원
+문재인 대통령의 대선 공약 중에는, 공공부문 직원을 174,000명 증원하고, 행정기관, 공공기관, 공기업 및 협력업체에 고용된 `비정규직 노동자(일반적으로 한국 법률이 규정하는 ‘비정규직 노동자’는 다음의 세 가지 종류로 나뉜다. 노동계약의 기한이 정해진 기간제노동자, 노동시간이 주40시간 미만인 단시간노동자, 파견근로업체의 직원으로서 다른 사업장에 파견나가서 노동하는 파견노동자. 그 외에도 자영업사업자로 계약을 맺었으나 사실상 노동자처럼 일하는 ‘특수고용 노동자’ 등도 비정규직으로 보는 경우가 많다.)` 205,000명을 정규직으로 전환하는 사업이 있었다. 각 기관을 담당하는 행정부처가 다르므로 개별 사안은 따로 이야기해야 하고(4권 ‘위원회와 주요 이슈 (2)’, p.XXX 참고), 여기서는 기획재정부와 행정안전부 차원의 총론을 이야기해보자. 
 
+동일노동에 동일한 대우를 해줘야 하는 원칙상 정규직화는 당연히 필요하지만, 그 과정이 결코 쉽지 않다. 각 기관마다 정규직과 비정규직을 채용한 방식이 다르고, 기존의 직급대우, 사내 복지, 연봉결정 과정 등에서의 차별도 기관마다 워낙 달라서 각기 다른 방식의 접근을 해야 하기 때문이다. 어떤 경우는 무기계약직으로 전환하여 해고가 되지 않는 수준에 머무르기도 하고, 어떤 경우는 기관이 직고용하지 않고 별도의 자회사를 설립해서 고용하는 방식으로 진행되기도 한다. 이런 세부내용의 차이 때문에 협상이 길어지거나 노사분규가 일어나기도 한다. 
 
+세부내용이 복잡하게 되는 가장 구조적인 이슈는, 기획재정부가 운영하는 “총액인건비제”이다. 매년 각 부처와 공공기관마다 사용할 수 있는 인건비의 총액을 결정하여, 그 금액을 초과할 수 없게끔 하는 제도이다. 행정의 측면에서 보면, 인건비 총액에 제한을 두어서 각 기관이 인력을 무제한으로 충원하며 행정권한과 사무도 무제한으로 확장시키는 일을 막는 제도이다. 그러나 공공부문 정규직화나 인력 증원을 진행하는 상황에서 총액인건비제는, 신규 인력 또는 정규직으로 전환되는 인력이 받을 인건비를 제한하고, 기존 정규직이 받는 인건비를 축소시켜서 자칫 정규직과 비정규직/신규 인력 사이의 갈등을 촉발할 수 있다. 
+
+<!--
 #### 공공부문 특채와 공채
-
+행정ㅇ
+-->
 
 
 - - -
