--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -29,12 +29,26 @@
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 #### “성적 지향”과 “동성애” 사이
+인권과 관련하여 국회에서 매번 논쟁에 빠지는 법률안 두 가지가 있다. 하나는 <국가인권위원회법>, 또 하나는 아직 제정되지 않은 <차별금지법>이다. 
 
 #### 일터에서 살아남을 것. 
+고용노동부가 발표한 2019년 산업재해 사망자수는 855명. 하루에 2명은 일 하다가 죽는다는 뜻이다. 
+
+#### 하루 10시간, 또는 12시간 노동
+지금 이 책을 만들고 있는 스튜디오 하프-보틀은 10:00 출근, 18:30 퇴근(점심시간 1시간 포함)을 실시하고 있다. 디자이너이자 이 책의 작가인 대표는 2020년 3월 15일 현재 어쩔 수 없이 책 쓰는 시간까지 포함하여 21:00 또는 23:00까지 노동을 하지만, 이렇게 피곤하게 일하게 해서는 능률이 오르지 않는 바, 동료들에게도 이렇게 일하도록 권고할 수가 없다. 
+
+하지만 
 
 #### 치료하는 사람, 치료받는 사람
 
-#### 돈을 받
+#### 돈 내는 사람, 돈 받는 사람
+
+#### 존재하는 상황 파악하기
+
+#### 존재하는 피해 지원하기
+
+#### 생활공동체
+
 
 - - -
 
@@ -65,7 +79,7 @@
 
 사민주의 정당은 노동문제를 노동자의 입장에서 대변하는 정당이고, 그런 정당 소속의 환노위 국회의원은 억울한 노동사건들이 국회에서 논의되도록 하는 중요한 창구 역할을 하게 된다. 2016-2020 국회에서는 이정미가 그런 역할을 맡았다. 파리바게트 비정규직 노동자에 대한 노동법 상습위반, 한국도로공사 톨게이트 노동자의 해고위협 문제, 직장 내 괴롭힘과 비정규직 노동자의 산업안전 사안(일명 ‘김용균법’)을 다루는 <산업안전보건법> 개정안 제안 등, 이정미를 통해 다뤄진 사안들은 한국 사회 전반의 노동문제를 매우 깊숙히 파고드는 문제였다.
 
-#### 경기 파주 갑, 충북 청주시 청원구
+#### 경기 파주시 갑, 충북 청주시 청원구
 **미래통합당 신보라(비례대표), 국민의당-미래통합당 김수민(비례대표)**
 
 국회의 구성이 점점 늙어가고 (일생에서 가장 곤란한 시기를 겪는) 젊은 여성을 대변하기 어려운 구성이 되어가는 현실 속에서, 2016-2020 국회에서 이를 그나마 잘 대변할 수 있는 의원 2명이 모두 보수정당에서 등장했다. 신보라와 김수민은 `2016년 총선에서 당선된 현역의원(나머지 한 명의 현역 30대 국회의원인 정은혜(더불어민주당)의 경우, 2016년에 비례대표로 출마해서 낙선했으나, 사퇴한 비례대표 의원의 직을 2019년에 승계한 사례이다.)` 중에서 현재 유이한 30대 국회의원으로, 각 당(새누리당, 미래통합당)에서 최고위원과 충북도당위원장 등의 주요 당직을 맡아 주목받았다. 
@@ -83,7 +97,7 @@
 이런 현실에서, 외통위는 주로 행정처리기관으로서의 외교부와 통일부에 대한 감사 역할을 맡게 된다. 각국 대사관/공사관의 업무, 개성공단 등 남북교류 사업에서의 민원성 업무처리문제 등이 국정감사에서 주로 논의된다. 사실 이 문제는 단순한 민원처리 수준을 넘어선다. 외국 사법부에 의해 한국 국민이 부당한 감옥살이 또는 인권침해를 겪는다던가, 한국 국민의 신체와 재산이 억류되는 상황이 논의되기 때문이다. 이런 문제가 외교부나 통일부의 관심을 충분히 받지 못해서 제대로 해결되지 못할 때, 외통위의 국정감사에서 논의되는 것은 문제해결을 위해 큰 도움이 된다. 
 
 ### 국방위원회(국방위)
-국방위원회는 국방부 및 국방과 관련된 업무를 소관한다. 한국의 국방예산은 중앙정부 `전체 예산의 약 10%(2020년도 예산안 기준 약 50조 2천억 원)`를 차지하고, 한국군은 약 60만 명의 상비군으로 이뤄진 거대한 일터이자 생활공간이다. 한국군 내에서 예산의 쓰임, 구조개편, 경제활동, 생활수준 및 인권상황은 한국 사회 전체에 거대한 영향을 미치는 문제가 아닐 수 없다. 국방위에서 논의되어 효과를 발휘하는 분야는 상당히 넓다. 국방위에서는 한국군의 작전계획 및 장기적인 구조개편, 신무기 도입, 방위산업 비리, 보급품 품질 문제, 한국군 내 병사처우 문제, 인권탄압 사례, 징집 및 병무관리 등등 군 관련 문제 전반이 논의된다. 군 장성 출신 국회의원이 상급 직업군인이나 군대 내 군사전문가의 입장을 대변한다면, 민간인 출신 국회의원은 하급 직업군인이나 민간의 군사전문가, 징집병의 입장을 대변하여 한국군 내 문제를 다룬다. 
+국방위원회는 국방부 및 국방과 관련된 업무를 소관한다. 한국의 국방예산은 중앙정부 `전체 예산의 약 10%(2020년도 예산안 기준 약 50조 2천억원)`를 차지하고, 한국군은 약 60만 명의 상비군으로 이뤄진 거대한 일터이자 생활공간이다. 한국군 내에서 예산의 쓰임, 구조개편, 경제활동, 생활수준 및 인권상황은 한국 사회 전체에 거대한 영향을 미치는 문제가 아닐 수 없다. 국방위에서 논의되어 효과를 발휘하는 분야는 상당히 넓다. 국방위에서는 한국군의 작전계획 및 장기적인 구조개편, 신무기 도입, 방위산업 비리, 보급품 품질 문제, 한국군 내 병사처우 문제, 인권탄압 사례, 징집 및 병무관리 등등 군 관련 문제 전반이 논의된다. 군 장성 출신 국회의원이 상급 직업군인이나 군대 내 군사전문가의 입장을 대변한다면, 민간인 출신 국회의원은 하급 직업군인이나 민간의 군사전문가, 징집병의 입장을 대변하여 한국군 내 문제를 다룬다. 
 
 한국군의 문제는 북한과의 관계에서 중요한 위치를 차지한다. 북한과의 군사충돌 상황이 벌어지면 국방위는 국방부로부터 그 상황을 보고받고 향후 대응에 대한 토론을 벌인다. 교류를 확대할 때에는 군비를 축소하거나 군사시설을 조정하는 문제, 남북 고위급 군사회담의 결과에 대한 토론을 벌인다. 뿐만 아니라, 한국군의 문제는 국제적 문제의 중심에 서기도 한다. 한국군(특히 한국 육군)은 국제적으로 열 손가락 안에 꼽히는 상당한 규모와 질적 수준을 자랑하는 만큼, 한국군이 특정 해외분쟁에 파병하여 개입하느냐 마느냐는 국제적으로 상당한 이슈가 된다. 2003년 한국군의 이라크 파병 문제는 국제정세 차원의 중요 이슈로 국방위에서 논의되었고, 한국 국회가 전세계의 주목을 받는 계기가 되었다.
 
@@ -113,19 +127,33 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
-#### 쿠데타 막기
-
 #### 전쟁 끝내기
+남북 정상회담이 말 그대로 수시로 열렸던 2018년에만 해도, 남한-북한 관계, 북한-미국 관계에 커다란 진전이 있어서 한국전쟁 종전선언과 북한 핵무기 폐기 등이 금방 이루어질 것만 같았다. 상대방을 도발 잘 하기로 유명한 북한과 미국(특히 도널드 트럼프 대통령) 사이에서, 당시 한국 외교당국이 양국의 가교 역할을 하면서 이루어낸 성과였다. 그러나 2019년 2월 북미 정상회담(하노이 회담)이 결렬된 이후로 관계개선의 속도가 급격히 느려져서, 2019년 6월의 판문점 남북미 정상회동 이후 3자의 접촉 횟수는 눈에 띄게 줄어들었다. 다만 그 사이에 3자 간의 관계가 악화되었다고 보기는 어렵다. 이 애매한 상황 속에서, 갑자기 다시 회담이 이어지며 관계개선의 급물살을 탈지, 아니면 무력충돌이나 외교마찰 때문에 관계개선의 여지가 완전히 없어져버릴지는 지금 알 수 없다. 
 
-#### 강소국 되기
+민주당계 정당과 보수주류 정당은 대북 외교 문제에 있어서 ‘평화외교’와 ‘힘의 우위’라는 서로 다른 상반된 가치관을 바탕으로 접근하곤 한다. 현재와 같은 상황에서 행정부의 외교정책 방향은, 2020년 총선 이후 4년간 이어질 국회가 어떻게 구성되느냐에 따라 큰 영향을 받을 것이다. 두 정당 중에서 주도권을 가질 정당의 목소리가 국회를 통해 여론에 계속해서 오르내리면, 그 여론이 곧 유권자 전체의 여론처럼 모아져서 행정부의 외교노선 선택에 영향을 주기 때문이다. 이와 관련하여 2016-2020 국회에서 일어난 가장 유명한 사건이, 2019년 5월 자유한국당 강효상 의원이 외교부 공무원을 통해 입수받은 한미 정상간 통화내용을 유출한 사건이다. 유출된 내용을 바탕으로 강효상은 2019년 6월 북미 정상회동이 이뤄지지 않을 것이라고 수 차례 예측했으나, 실제로는 판문점에서 남북미 정상회동이 이뤄져서 빈축을 샀다. 
+
+#### “다시는 일본에 지지 않을 것”
+일본 행정부가 2019년 6월 반도체 소자 제조의 원료를 한국에 수추
+
+#### 지역강국, 강소국 되기
+한국이 지리적으로 미국, 중국, 일본, 러시아 등 강대국에 둘러싸여 있다보니, 한국 행정부는 그 사이에서 외교상황의 현상유지만 잘 하면 “외교를 잘 한다”고 평가받기도 한다. 그러나 마주보고 있는 너무 센 이웃 강대국을 제외하고 국제사회 전체에서의 위상을 놓고 생각하면, 한국은 그 자체만으로도 충분히 큰 경제력, 인구, 국방력 등을 바탕으로 국제적인 영향력을 발휘하는 강소국이 될 수 있다. 강대국과 어느 정도 비슷한 수준에서 외교를 하기 위해서라도, 한국은 많은 아시아의 주변 국가의 외교적 지지를 바든 지역 강(소)국으로 자리잡는 것이 중요할 수 있다. 
+
+대중적으로는 잘 알려지지 않았지만, 문재인 행정부가 진행하고 있는 이른바 ‘신-남방정책’이 이러한 흐름에서 진행되고 있다. 이른바 아세안(ASEAN: 동남아시아국가연합. 동남아시아 10개국의 경제, 정치안보, 사회문화 공동체로 구성된 국제기구로, 장기적으로 동남아시아의 유럽연합EU와 같은 형태로 발전할 것을 추구한다.) 경제권이라고 불리우는 동남아시아 국가들과의 경제, 안보 및 문화교류를 강화하여, 아세안에서 한국이 가지는 외교관계 영향력을 미·중·일·러 4개국과 동등한 수준으로 끌어올린다는 정책이다. 신-남방정책이 지속된다면, 주로 미·중·일과의 관계 중심으로만 다루어진 국회에서의 외교정책 논의에 있어서도, 정당별로 다른 입장을 보이면서 새로운 주요 논의안건으로 떠오를 가능성이 있다. 
 
 #### “제복입은 시민”
+“제복입은 시민”이란, 민주주의 국가에서 군인/경찰 등 물리적 공권력을 사용할 수 있는 인물이 갖춰야 하는 소양을 나타내는 관용구다. 공권력을 쥔 사람도 민간인의 동료 시민으로서 민간인을 억압하거나 민간인에게 군림해서는 안 된다는 개념의 표현이다. 또 한편으로는, 상급자의 명령에 따라 공권력 집행에 동원되는 하급 군인/경찰이라도, 시민으로서의 권리를 상급자에게 부당하게 침해받지 않아야 한다는 뜻도 내포되어 있다. 
+
+이명박-박근혜 행정부와 문재인 행정부의 기조 차이가 가장 분명한 분야가 이것이다. 경찰이 자칫 폭력적으로 돌변할 수 있는 대형 집회에서 대응기조의 변화, 2016년 박근혜 탄핵 촛불집회를 `쿠데타로 진압하려던(방첩부대인 국군기무사령부가 탄핵 부결시 발생할 수 있는 ‘소요사태’에 대비해 계엄령을 선포하고 전방 군 병력을 서울 전역에 배치해서 국회의원 체포, 언론 검열 등을 하려던 계획이, 2018년 더불어민주당 이철희 의원과 군인권센터의 문건공개로 드러났다.)` 계획이 드러난 이후 방첩부대의 대대적인 개편 등을 통해 민간 정부에 의한 군경의 통제가 복원되었다. 또한 군경 개인의 권리 보장에 있어서도 상당한 진전이 있었는데, 국군 내 성소수자 색출 시도를 적발한 것, 휴식시간에 병영 내 휴대전화 사용 허용, 장군의 공관병 대상 사적행위 지시 적발 등의 상징적인 사건들이 연달아서 일어났다. (비록 며칠 만에 전역처리 되었지만) 한국군 최초의 공개 트랜스젠더 부사관 변희수가 등장할 수 있었던 것도, “제복입은 시민”의 권리가 강화되는 사회 흐름 속에서 나타날 수 있었던 의미있는 사건이었다. 국회를 통해 “제복입은 시민” 정책을 더욱 확대하는 입법활동이 지속된다면, 한국 공권력에 대해 시민이 가진 불신과 편견을 상당히  변화할 수도 있다. 
 
 #### 자치경찰, 수사경찰
+문재인 행정부에서는 경찰의 권한과 구조를 바꾸는 작업이 계속 진행되었다. 주로 논의되었던 주제는 자치경찰제와 경찰의 수사권 문제였다. 
 
-#### 긴급상황 대비하기
+#### 재난상황 대비하기…
+재난상황에 대처하는 행정부와 입법부의 모습을 보면, 국가의 인프라와 행정력의 수준이 드러나게 된다. 우리가 보통 재난 하면 떠올리는 사례들 - 지진, 수해, 대형 산불 등 - 은 재난을 조기에 종식하고 피해복구에 나서기 위해 전국 차원에서 물자와 인력을 투입하게 된다. 예를 들어 2019년의 고성-속초-강릉-동해 산불의 경우, 이재민의 숙소와 식량물자 공급, 그리고 전국에서 소방인력과 도구를 급파하는 작업이 필요하다. 따라서 이런 대형 재난상황에 대처하는 가이드라인을 쌓고 이를 실행할 조직과 시스템을 유지보수하는 일이 중요하다. 이런 과정의 일환으로, 국회에서는 재난이 일어났을 때 대응을 잘한 점과 개선할 점을 다음 국정감사 때 지적하기도 하고, 재난에 대응하는 과정에서 새롭게 드러난 법률상 미비점을 입법활동을 통해 고치기도 한다.
 
-#### 
+대형 재난 못지 않게 중요하지만 이슈화가 잘 되지 않는 문제는, 다름아닌 일상에서의 재난상황이다. 산업현장이나 산간오지에서 긴급 외과수술이 필요한 심각한 부상자가 생기는 경우, 또는 열악한 주거 및 노동환경에서 열사병을 얻는 응급환자가 생기는 경우를 떠올려보자. 눈에 띄는 거대하고 심각한 상황이 벌어지지는 않지만, 일상 속에서 꾸준히 발생하다보니 재난과 동급의 인명/재산피해가 누적되어 발생하는 
+
+#### …그 중에서도 특히 전염병.
 
 - - -
 
@@ -144,11 +172,11 @@
 특이하게, 그가 소속한 선거구에는 지역에 강력한 영향력을 발휘하고 있는 보수적 대형 종교 커뮤니티(명성교회: 강동구 명일1동)가 자리잡고 있다. 진선미의 그간의 행보가 명성교회 커뮤니티 내부의 반발을 일으킨다면, 2020년 총선에서 어떤 결과로 이어질지 주목할 만 하다. 
 
 #### 경기 평택시 갑, 인천 동구-미추홀구 을
-**미래통합당 원유철(불출마), 무소속-미래통합당-무소속 윤상현**
+**미래통합당-미래한국당 원유철(불출마), 무소속-미래통합당-무소속 윤상현**
 
 소속정당과 무관하게, 중진 국회의원의 발언과 행보는 외국에서도 상당한 외교적 영향력을 가진다. 언제든 정권교체를 통해 행정부 주요 의사결정권자가 될 수 있고, 또한 민의를 대변하는 국회의원의 발언은 곧 그 나라 유권자가 원하는 외교정책을 발언하는 것이기 하기 때문이다. 중진 국회의원이 외교정책과 관련한 극단적 표현을 삼가야 하는 이유가 여기에 있다. 
 
-2012년부터 외통위에서 활동한 보수주류 정당의 두 중진 의원, 원유철과 윤상현의 외교 관련 발언은 그런 점에서 무게감이 상당했다. 두 사람 모두 손꼽히는 대-북한 강경파이지만, 두 사람의 행보를 갈라놓는 것은 핵무장론이었다. 원유철이 자체 핵무기 개발을 주장하고, 윤상현이 자체 핵무장을 반대하며 미군 핵잠수함을 배치하여 `핵우산(핵무기를 개발하지 않고, 대신 미국이 보유한 핵무기를 배치하여 타국의 핵공격을 예방하는 ‘우산’ 속으로 들어간다는 개념.)`으로 들어가자는 주장을 했다. 핵무기 자체를 반대하는 사람들이나 타국의 외교당국 입장에서는 둘 다 황당한 이야기이지만, 보수적 외교관을 가진 사람들에게는 상당히 진지한 이야기였을 것이다.
+2012년부터 외통위에서 활동한 보수주류 정당의 두 중진 의원, 원유철과 윤상현의 외교 관련 발언은 그런 점에서 무게감이 상당했다. 두 사람 모두 손꼽히는 대-북한 강경파이지만, 두 사람의 행보를 갈라놓는 것은 핵무장론이었다. 원유철이 자체 핵무기 개발을 주장하고, 윤상현이 자체 핵무장을 반대하며 미군 핵잠수함을 배치하여 `핵우산(핵무기를 개발하지 않고, 대신 미국이 보유한 핵무기를 배치하여 타국의 핵공격을 예방하는 ‘우산’ 속으로 들어간다는 개념.)`으로 들어가자는 주장을 했다. 핵무기 자체를 반대하는 사람들이나 타국의 외교당국 입장에서는 둘 다 황당한 이야기이지만, 군사력의 힘에서 우위를 유지해야 한다는 보수적 외교관을 가진 사람들에게는 상당히 진지한 이야기였을 것이다.
 
 
 
@@ -156,7 +184,7 @@
 **활기있는 사회는 부유함 만으로 이룰 수 없다. 배우고, 가르치고, 즐기고, 통찰하고, 상상하여, 사회 전반의 이성과 감성과 신체를 일깨워야 한다. 이런 작업에 국가 예산과 행정력이 투입되어야 한다. 당장은 쓸모없어 보이더라도.**
 
 ### 교육위원회(교육위)
-교육위원회는 교육부가 담당하는 유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 직업교육, 평생교육과 관련된 사항을 논의한다. 이것을 ‘교육정책’이라는 한 단어로 퉁치는 것은 너무 가벼운 일이다. 한국의 엘리트 지배계급은 (공)교육사업이 장래 경제문제와 사회문제 등 나라의 근간을 좌우하는 중요한 문제라고 취급한다. 한편으로 공교육은 학생과 보호자의 욕망과 경쟁심이 이글거리는 장이기도 하다. 또 한편으로는 학교에 다니는 청소년들의 생활 공간을 다루고, 교육을 받고 교육을 제공하는 성인 학생, (교사와 연구원 등) 노동자들의 커뮤니티이자 일터를 다룸으로서 사람들의 삶에 큰 영향을 끼치는 영역이다. 한국 사회에서 공교육이 가지는 의미는 이처럼 거대해서, `1년에 72조 5천억 원, 전체 국가재정의 14.1%(2020년도 예산안 기준)`를 투입하는 거대한 사업이다. 한편으로는 입시부정이나 사학의 비리운영과 같은 감사할 구멍도 많고, 또 한편으로는 아무리 잘 굴러가더라도 모두를 만족시킬 수 없는 아주 난해한 사업이기도 하지만.
+교육위원회는 교육부가 담당하는 유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 직업교육, 평생교육과 관련된 사항을 논의한다. 이것을 ‘교육정책’이라는 한 단어로 퉁치는 것은 너무 가벼운 일이다. 한국의 엘리트 지배계급은 (공)교육사업이 장래 경제문제와 사회문제 등 나라의 근간을 좌우하는 중요한 문제라고 취급한다. 한편으로 공교육은 학생과 보호자의 욕망과 경쟁심이 이글거리는 장이기도 하다. 또 한편으로는 학교에 다니는 청소년들의 생활 공간을 다루고, 교육을 받고 교육을 제공하는 성인 학생, (교사와 연구원 등) 노동자들의 커뮤니티이자 일터를 다룸으로서 사람들의 삶에 큰 영향을 끼치는 영역이다. 한국 사회에서 공교육이 가지는 의미는 이처럼 거대해서, `1년에 72조 5천억원, 전체 국가재정의 14.1%(2020년도 예산안 기준)`를 투입하는 거대한 사업이다. 한편으로는 입시부정이나 사학의 비리운영과 같은 감사할 구멍도 많고, 또 한편으로는 아무리 잘 굴러가더라도 모두를 만족시킬 수 없는 아주 난해한 사업이기도 하지만.
 
 교육위는 지역구 국회의원들이 들어가기 선호하는 위원회 중 하나다. 지역 내 교육시설이나 교육관련 예산을 유치하는 것이 지역구에서 다시 당선되는 데에 중요한 역할을 하기 때문이다(배정된 예산이 많다는 것은 따올 수 있는 예산이 많다는 의미이기도 하다). 특히 2010년대 초까지 특수목적고등학교나 자립형/자율형사립고 유치 열풍이 불었을 때, 교육위 소속 국회의원들은 이러한 고등학교의 설립/전환을 최종 인가하는 교육부를 직접 상대할 수 있었다. 이것은 현재에도 대학교 시설 또는 분교 유치, 도서관 유치와 같은 지역사업의 형태로 지속되고 있다. 
 
@@ -178,20 +206,28 @@
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 #### 교육 질 높이기
+먼저 이 질문을 던져보자. “교육의 질”이란 무엇인가? 
 
 #### 대학교 입시
+한국에서 대학교 입시정책이 미치는 여파는 상당하다. 입시정책의 변화에 따라 학생인 시민 개개인의 
 
 #### 대학교 구조조정
+대학교
 
 #### 대학교 내 연구 문제
+한 때 한국에서 “이공계 기피현상”이라고 일컬어지던 문제는, 
+
 
 #### 블랙리스트와 아카데미
+영화 <기생충>이 국제적으로 대흥행하고 아카데미 4관왕을 차지하던 그 시점에서, 한국 문화계를 
 
 #### 온라인 접속차단
 
 #### 공정방송, 공정언론
+공영방송사의 비중이 큰 한국에서는 ‘공정방송’, 곧 ‘공정언론’에 대한 이야기가 국회에서 자주 등장할 수 밖에 없다. 
 
 #### 언론, 포털
+“파도처럼 살다가 방파제가 된 아이.” 포털서비스 네이버가 연예계 기사의 댓글기능 폐쇄를 발표한 2020년 2월, 최수영(소녀시대 수영)이 고 최진리(배우 겸 f(x) 멤버)를 추모하며 남긴 코멘트다. 
 
 - - -
 
@@ -247,7 +283,7 @@
 ### 농림축산식품해양수산위원회(농축수위)
 사람들이 자주 잊곤 하지만, 농축수위가 담당하는 농림, 축산, 수산업도 인류문명을 떠받치는 아주 거대하고 중요한 ‘산업’이다. 도시에 사람이 살기 위해서는 도시 저 멀리에서 안전한 농수축산물이 안정적으로 공급되어야 하고, 도시 바깥의 마을은 농수축산업 없이는 경제활동이 불가능해서 사람이 살 수 없다. 한국의 행정력이 닿는 실질적인 영토를 “한반도 및 그 부속도서 내의 점처럼 남아있는 몇몇 큰 도시들”로 축소하고 싶지 않다면, 농수축산업을 “사양산업”이나 “경쟁력이 없는 산업”이라고 간단하게 퉁치고 넘어갈 수는 없다. 생산자를 보호하고 산업을 육성하며, 그 생산품이 가급적 안전하게, 그리고 가능하면 동물의 일생을 너무 가혹하게 쥐어짜지 않으며 생산하고 유통할 수 있도록 관리해야 한다. 
 
-농수축위가 담당하지만 대도시 사람들의 눈에 잘 띄지 않는 다른 분야는, 해양수산부가 담당하는 해운, 항만, 해양안전, 해상치안과 오염방제, 해양과학 및 기술 연구다. 한국은 휴전선의 봉쇄로 인해 실질적인 섬나라이고, 동시에 실제로 사람이 사는 섬이 어마어마하게 많다. 수출입 물자수송과 사람의 이동을 비롯해서, 행정부의 해양 관리에 따라 일상생활에 직접적인 영향을 받는 인구가 상당히 많다. 
+농축수위가 담당하지만 대도시 사람들의 눈에 잘 띄지 않는 다른 분야는, 해양수산부가 담당하는 해운, 항만, 해양안전, 해상치안과 오염방제, 해양과학 및 기술 연구다. 한국은 휴전선의 봉쇄로 인해 실질적인 섬나라이고, 동시에 실제로 사람이 사는 섬이 어마어마하게 많다. 수출입 물자수송과 사람의 이동을 비롯해서, 행정부의 해양 관리에 따라 일상생활에 직접적인 영향을 받는 인구가 상당히 많다. 
 
 
 ### 산업통상자원중소벤처기업위원회(산통자위)
@@ -273,20 +309,30 @@
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 #### 기후변화 위기
+불과 얼마 전까지 “지구온난화”라고 불리우는 하나의 현상에 불과했던 것이, 점점 인간(그 중에서도 사회적 취약계층)의 생활을 근본적으로 위협하는 “기후위기”로 다가오고 있다. 아시아와 유럽에서 1~ 2년 마다 역대 최고기온 기록이 갱신되고, 극지의 얼음은 
+
+우주 전체로 놓고 보면 티끌만한 지구 전체에 (그리고 그 지구 )
 
 #### 에너지 생산, 관리, 소비
+과학적으로 보았을 때, 
 
 #### “농민 프랜차이즈”와 농민 기본소득
+해방 직후 한국 인구의 8할은 농민이었고, 이들의 생계곤란을 해결해야한 신생 한국이 발전할 여지가 있었다. 
 
 #### 타다, 인터넷 은행
+새로운 산업이 태동할 때 행정부가 이를 지원하는 방법에 대해 생각해보자. 
 
 #### “개인정보 3법”
+새로운 산업의 육성을 위해 
 
 #### 인터넷망은 모두에게 평등한가?
+모든 일상생활이 인터넷망을 통해 이루어지는 현대사회에서, 인터넷망이 
 
 #### 4기 신도시와 집값
+임대료/매매가를 통틀어 집값이 상승했을 때, 행정부가 취할 수 있는 조치는 두 가지다. 하나는 집을 ‘자산 투자용’으로 사용하기 어렵도록 만드는 것, 또 하나는 신도시 건설을 통해 신규주택을 대량으로 공급하는 것. 문제는 현재 한국의 투자시장 환경에서, 새로 건설된 신도시는 그 자체로 새로운 ‘자산 투자용 주택’으로 취급되어 전체 집값을 또 상승시키는 요인이 될 수 있다는 점이다. 그래서 
 
-#### 말은 기수 없이 달릴 수 없다
+#### 기수 없는 말은 달릴 수 없고, 노동자 없는 요금소는 돈을 받을 수 없다.
+2019년을 가장 뜨겁게 달군 공공부문 노동분규는 한국마사회(농림축산식품부 소관)와 한국도로공사(국토교통부 소관)에서 일어났다. 
 
 
 - - -
